Save/Update files [ci skip]

--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -603,7 +603,7 @@
  NEW_ACHIEVEMENT_52_NAME:0 "ツィリになるな"
  NEW_ACHIEVEMENT_52_DESC:0 "ツィリで開始し、別の国家を形成する。"
  NEW_ACHIEVEMENT_53_NAME:0 "内部の混乱"
- NEW_ACHIEVEMENT_53_DESC:0 "The Islesで開始し、1500年までに島ではない州を20以上領有する。"
+ NEW_ACHIEVEMENT_53_DESC:0 "諸島連合で開始し、1500年までに島ではない州を20以上領有する。"
  NEW_ACHIEVEMENT_54_NAME:0 "シュテーン・デス・ズーデンス"
  NEW_ACHIEVEMENT_54_DESC:0 "ミュンヘンで開始してバイエルンを形成し、ワルデルを領有するブレーメンを属国として持つ。"
  NEW_ACHIEVEMENT_55_NAME:0 "神の王国"
@@ -634,7 +634,7 @@
  NEW_ACHIEVEMENT_68_NAME:0 "キズキズはさらに要求する"
  NEW_ACHIEVEMENT_68_DESC:0 "キズキズ国で、アンジュー州を首都にする。"
  NEW_ACHIEVEMENT_69_NAME:0 "それはモンじゃない"
- NEW_ACHIEVEMENT_69_DESC:0 "ペグー国で、モン文化以外の州を50州以上領有する。"
+ NEW_ACHIEVEMENT_69_DESC:0 "ペグーで、モン文化以外の州を50州以上領有する。"
  NEW_ACHIEVEMENT_70_NAME:0 "マンサ・ムーサ"
  NEW_ACHIEVEMENT_70_DESC:1 "マリで、借金や破産をせずに10000ダカットを他の列強へ贈る。"
  NEW_ACHIEVEMENT_71_NAME:0 "究極の軍隊"
@@ -644,7 +644,7 @@
  NEW_ACHIEVEMENT_73_NAME:0 "フッガー銀行"
  NEW_ACHIEVEMENT_73_DESC:1 "アウグスブルクで、20州未満の状態で、3つの列強にその収入の20%以上を補助金として支給する。"
  NEW_ACHIEVEMENT_74_NAME:0 "ペンギンは何処？"
- NEW_ACHIEVEMENT_74_DESC:1 "マダガスカルの国家で、マダガスカルを統一し、全ての南半球の州を領有する。"
+ NEW_ACHIEVEMENT_74_DESC:1 "マダガスカルの国家で、マダガスカルを統一し、全ての最南端の州を領有する。"
  NEW_ACHIEVEMENT_75_NAME:0 "これでヨシ！"
  NEW_ACHIEVEMENT_75_DESC:0 "+10以上の国家不穏度を抱えた状態で、自国を対象とした包囲網戦争に勝利する。"
  NEW_ACHIEVEMENT_76_NAME:0 "カーーーン"
@@ -657,13 +657,13 @@
  NEW_ACHIEVEMENT_79_DESC:0 "ユダヤ教の国で、ユダヤ共同体のアスペクトを発動させた状態で、全てのエジプト地域をユダヤ教へと改宗する"
  NEW_ACHIEVEMENT_80_NAME:0 "皆を治める一つの国家"
  NEW_ACHIEVEMENT_80_DESC:0 "サルハンとして、開発度が100以上の忠実な属国を９か国以上持つ。"
- NEW_ACHIEVEMENT_81_NAME:0 "Swahili Persuasion"
+ NEW_ACHIEVEMENT_81_NAME:0 "スワヒリ流の説得"
  NEW_ACHIEVEMENT_81_DESC:0 "キルワとして、モルッカとインドネシアをすべて改宗する。"
  NEW_ACHIEVEMENT_82_NAME:0 "砂は嫌いだ"
  NEW_ACHIEVEMENT_82_DESC:1 "砂漠や海岸砂漠以外の地形の州を領有せずに、最大の開発度を持つ国家となる。"
- NEW_ACHIEVEMENT_83_NAME:0 "Surfing USA"
+ NEW_ACHIEVEMENT_83_NAME:0 "アメリカへのサーフィン"
  NEW_ACHIEVEMENT_83_DESC:0 "ハワイからアメリカ合衆国を形成する。"
  NEW_ACHIEVEMENT_84_NAME:0 "インポスター症候群"
  NEW_ACHIEVEMENT_84_DESC:1 "スーとして、諜報員が発覚して敵対している（評価が0以下）国を3か国持つ。"
- NEW_ACHIEVEMENT_85_NAME:0 "Atwix Legacy"
+ NEW_ACHIEVEMENT_85_NAME:0 "Atwixの遺産"
  NEW_ACHIEVEMENT_85_DESC:0 "同時に10個の同君連合を組む。"
