--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -107,10 +107,10 @@
  DIPIRO_FLEETACCESS:0 "$WHO|Y$は$NAME|Y$へ艦隊通行権を与えます。\nこれは$NAME_ADJ|Y$の船が$WHO_ADJ|Y$の港に入り、修理することを許すものです。"
  DIPIRO_CB:0 "$WHO|Y$は$NAME|Y$に対して「$CB|Y$」の開戦事由を持っています。（$DESC$）\n$WHO|Y$はこの事由を$NAME|Y$への宣戦布告の理由として使うことが出来ます。"
  DIPIRO_CB_EXPIRE:0 "この開戦事由は§Y$DATE$§!まで有効です。"
- NO_WAR_ON_EMPIRE:0 "神聖ローマ皇帝と同盟しているため、神聖ローマ帝国構成国には宣戦布告できません。"
- NO_WAR_ON_EMPIRE_FIRST_MONTHS:0 "神聖ローマ皇帝と同盟を結んでいたり、神聖ローマ皇帝が最近戦争を行った場合、帝国の構成国に宣戦布告できません。"
- ALREADY_WAR_EMPIRE:0 "すでに神聖ローマ皇帝と戦争中のため、神聖ローマ帝国構成国には宣戦布告できません。"
- PEACE_IN_EMPIRE_NO_WAR:0 "ラント平和令が布告された後は、神聖ローマ帝国に加盟する国は他の加盟国に対して敵対的な行動をとることはできません。"
+ NO_WAR_ON_EMPIRE:0 "神聖ローマ皇帝と同盟しているため、帝国領邦には宣戦布告できません。"
+ NO_WAR_ON_EMPIRE_FIRST_MONTHS:0 "神聖ローマ皇帝と同盟を結んでいたり、神聖ローマ皇帝が最近戦争を行った場合、帝国領邦に宣戦布告できません。"
+ ALREADY_WAR_EMPIRE:0 "すでに神聖ローマ皇帝と戦争中のため、帝国領邦には宣戦布告できません。"
+ PEACE_IN_EMPIRE_NO_WAR:0 "ラント平和令が布告された後は、神聖ローマ帝国領邦は他の領邦に対して敵対的な行動をとることはできません。"
  DIP_MAINT_RM:0 "王室間の婚姻：（§Y$COUNTRY$§W）：§Y-$VAL$§W"
  DIP_MAINT_VASSAL:0 "属国がある：（§Y$COUNTRY$§W）：§Y-$VAL$§W"
  alert_agreement_fail_instant:0 "§Y協定はパワーが低いため失敗するだろう！§W"
@@ -744,7 +744,7 @@
  GRANTELECTORATEREQDESC:0 "$ACTOR$より神聖ローマ帝国の選帝候に指名されます。承諾すると次期皇帝を決める選挙で投票が可能になります。"
  GRANTFREECITYREQDESC:0 "$ACTOR$から神聖ローマ帝国の自由都市の地位の付与を提案されます。了承することにより政体が自由都市に変わり、皇帝が全ての侵略者から我々を保護するようになります。我々がより多くの州を獲得したり帝国を離脱した場合、自由都市の地位を失います。"
  DEMANDUNLAWFULTERRITORYREQDESC:0 "皇帝$ACTOR$は「$PROV|Y$」を神聖ローマ帝国に返還するよう要求します。この要求を拒否した場合、我々と神聖ローマ帝国の関係に深刻な影響を与えます。"
- DEMANDUNLAWFULTERRITORYREQDENYEFFECTS:0 "拒否した場合の影響：\n皇帝はあなたに対して開戦事由を得るでしょう。\n州の影響：\n$PROVEFFECT$\n\n神聖ローマ帝国構成国から受ける評価補正：\n$OPINIONEFFECT$"
+ DEMANDUNLAWFULTERRITORYREQDENYEFFECTS:0 "拒否した場合の影響：\n皇帝はあなたに対する開戦事由を得ます。\n州の影響：\n$PROVEFFECT$\n\n神聖ローマ帝国領邦から受ける評価補正：\n$OPINIONEFFECT$"
  TRANSFERTRADEPOWERDESC:0 "$ACTOR$は我が国の全ての交易ノードで産出する交易力の内$VAL|0%$を譲渡するよう求めています。これを了承しますか？"
  revoke_elector_opinion:0 "選帝候位を剥奪した"
  grant_freecity:0 "自由都市の地位を与えた"
@@ -845,7 +845,7 @@
  INTEGRATE_OWNS_MORE_PROVINCES:0 "$BIG$は$SMALL$より多くの州を領有しています。"
  PEACEOFFER_DEMANDED_PROVINCE_CANNOT_TAKE_CAPITAL:0 "これは彼らの首都であり、我々は他の州を要求しているので、我々はこれを要求することはできません。"
  DIPLO_CHANGE_VASSALS:0 "他の従属国の評価変動："
- DIPLO_CHANGE_EMPIRE:0 "他の神聖ローマ帝国構成国の評価変動："
+ DIPLO_CHANGE_EMPIRE:0 "他の神聖ローマ帝国領邦の評価変動："
  SUBJECT_NEW_WAR:0 "$SUBJECT$は$LIST$との戦争に$OVERLORD$を引き込みます。"
  SUBJECT_NOT_NEW_VAR:0 "$OVERLORD$は$SUBJECT$と$SUBJECT_ENEMY$の戦争に参戦しません：$REASON$"
  PART_OF_HRE:0 "$COUNTRY|Y$は神聖ローマ帝国内の一国です。"
