--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -1087,7 +1087,7 @@
  incident_switzerland_emperor_alert:0 "スイスは帝国を見捨てた！宗教的平和への不満や帝国制度との関係の弱体化に動かされ、スイスは神聖ローマ帝国への加盟が、もはや彼らの利益にはならないと決断したのだ。"
  emperor_loses_claims_tt:0 "§Y帝国はスイスのテリトリーに対する請求権を放棄するでしょう。§!"
  incident_pope:0 "教皇と帝国"
- incident_pope_member_alert:0 "イタリアが再び帝国の権威の砦となったことで、ローマ教皇は神聖ローマ帝国の諸侯となることを求めている。教皇が皇帝の権威を受け入れることはカトリック世界に大きな影響をもたらすだろう。帝国内のカトリック国家は、教皇の参加によって与えられる正統性によって信仰を強化できるかもしれないが、帝国外の国家はそのような決定を好意的に捉える可能性は低く、異端者へと変わる可能性もある。"
+ incident_pope_member_alert:0 "イタリアが再び帝国の権威の砦となったことで、ローマ教皇は神聖ローマ帝国領邦となることを求めている。教皇が皇帝の権威を受け入れることはカトリック世界に大きな影響をもたらすだろう。帝国内のカトリック諸侯は、教皇の加盟によって与えられる正統性によって信仰を強化できるかもしれないが、帝国外の国家はそのような決定を好意的に捉える可能性は低く、異端者へと変わる可能性もある。"
  incident_pope_emperor_alert:0 "イタリアが再び帝国の権威の砦となったことで、ローマ教皇は神聖ローマ帝国の諸侯となることを求めている。教皇が皇帝の権威を受け入れることはカトリック世界に大きな影響をもたらすだろう。帝国内のカトリック国家は、教皇の参加によって与えられる正統性によって信仰を強化できるかもしれないが、帝国外の国家はそのような決定を好意的に捉える可能性は低く、異端者へと変わる可能性もある。"
  flavour_tupi_tamoyo_force:1 "トゥピナンバ文化に隣接する領有州はすべて、§Y5§!年間§Y「トゥピの敵意」§!の補正を獲得し、以下の効果を得ます：\n州不穏度：§R+1§!\n州税収：§R-10%§!\n州の植民地成長：§R-15§!"
  flavour_tupi_tamoyo_jesuits:1 "トゥピナンバ文化の領有州はすべて、§Y10§!年間§Y「トゥピの敵意」§!の補正を獲得し、以下の効果を得ます：\n州不穏度：§R+1§!\n州税収：§R-10%§!\n州の植民地成長：§R-15§!"
@@ -1905,7 +1905,7 @@
  gpw_peasant_power_weak:1 "帝国全体の貴族階級はゲーム終了までの間、§R-5%§!の忠誠と§Y-5%§!の影響力を持つでしょう。"
  great_peasants_war_concessions_triggered_modifier:0 "農民への譲歩"
  desc_great_peasants_war_concessions_triggered_modifier:0 "大農民戦争は帝国に対して農民の権利を再考することを強制した。多くの譲歩が与えられ、古い特権が保証されたため、彼らの労働力から富を引き出す能力は減少している。"
- gpw_concessions_triggered_modifier_tt:0 "補正§Y「農民への譲歩」§!が有効となり、農民共和国ではない神聖ローマ帝国の加盟国に§R-5%§!の国家税収補正が与えられます。"
+ gpw_concessions_triggered_modifier_tt:0 "補正§Y「農民への譲歩」§!が有効となり、農民共和国ではない神聖ローマ帝国領邦に§R-5%§!の国家税収補正が与えられます。"
  EST_VAL_GREAT_PEASANTS_WAR_NOBLES_WIN_MINOR_INFLUENCE:0 "縮小された農民の権利: §Y$VAL$%§!"
  EST_VAL_GREAT_PEASANTS_WAR_NOBLES_WIN_MINOR_LOYALTY:0 "廃止された農民の権利: §Y$VAL$%§!"
  EST_VAL_GREAT_PEASANTS_WAR_NOBLES_WIN_MAJOR_INFLUENCE:0 "縮小された農民の権利: §Y$VAL$%§!"
@@ -2553,7 +2553,7 @@
  AUS_sandpaper_and_cheating:0 "ディガー"
  AUS_sandpaper_and_cheating_desc:0 "オーストラリアのディガーは、我が輝かしい帝国のために外国の地で戦うことを目的として配備された銃兵隊と海兵隊である。「ディガー」という言葉は、ほとんどのディガー兵士が軍務についていない際は鉱山労働者であるという事実からきた、鉱山労働者の隠語である。この通称は、「仲間であること」というオーストラリアの概念を象徴している。つまり、それは対等で、同僚で、友人であるということだ。"
  AUS_royal_navy:0 "王立オーストラリア海軍"
- AUS_royal_navy_desc:0 "王立オーストラリア海軍は、オーストラリア植民地の異なる州を基盤として6つの艦隊に分かれている。植民地支配から解放された今、我々は自由に6つの州を1つに統合することができ、オーストラリアを太平洋で激しく争う者のない力とするだろう。"
+ AUS_royal_navy_desc:0 "王立オーストラリア海軍は、オーストラリア植民地の異なる州を基盤として6つの艦隊に分かれている。植民地支配から解放された今、我々は自由に6つの州を1つに統合することができ、オーストラリアを太平洋で比類なき国家とするだろう。"
  AUS_bushrangers:0 "ブッシュレンジャーの統合"
  AUS_bushrangers_desc:0 "オーストラリアで暮らすために本土から送られた相当数の移民は、有罪判決を受けた者や、好まれぬ者だったために強制追放された者たちだ。その中でも特に狡猾な泥棒や人殺しがブッシュレンジャーとなった。彼らは過酷なオーストラリアの奥地を略奪の拠点とした、強健な男たちだった。彼らはオーストラリアのゴールドラッシュの間、特に裕福で力を持っていたが、今や、植民地の圧政者たちから自由を勝ち取ったので、これらの男たちは誰にも有罪判決を受けず、敵への奇襲戦術にうまく利用できるだろう！"
  AUS_waltzing_matilda:0 "ワルチング・マチルダ"
