--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -364,20 +364,20 @@
  emp_hab_union_with_poland_desc:0 "自国の北東国境部は、ポーランド全域がオーストリア[Root.GetStateForm]の臣下としてみなせるまでは、決して真に安全だとは言えないだろう。"
  emp_hab_imperial_border_title:0 "帝国国境"
  emp_hab_imperial_border_desc:0 "神聖ローマ帝国領の中には我が支配から外れ、皇帝の権威を認めない者たちの手で統治されている領域もある。この状況を是正せねばならない。"
- emp_hab_imperial_border_effect_tooltip:0 "オーストリアのライバルでない、またはオーストリアにライバル指定されていない全ての神聖ローマ帝国の加盟国は§Yオーストリア§!に対し§G10§!の信頼度を獲得します。"
+ emp_hab_imperial_border_effect_tooltip:0 "オーストリアのライバルでない、またはオーストリアにライバル指定されていない神聖ローマ帝国の全領邦は§Yオーストリア§!に対し§G10§!の信頼度を獲得します。"
  emp_hab_no_one_to_threaten_us_title:0 "帝国の権勢"
  emp_hab_no_one_to_threaten_us_desc:0 "公爵の中には、自国に挑戦して帝国の支配権を自ら握ろうとする野心を持つ者たちもいる。こうした野心を鎮め、我が力の優位性を間違いなく誰もが認めるよう、外交力及び軍事力を誇示する必要がある。"
- emp_hab_no_one_to_threaten_us_trigger_tooltip:1 "以下の神聖ローマ帝国加盟国がない：\n  §Yヨーロッパ§!で§Y10§!以上の州を§Y国家§!またはその従属国（非朝貢国）が領有している。\n  §Yオーストリア§!の従属国ではない。"
- emp_hab_no_one_to_threaten_us_trigger2_tooltip:1 "神聖ローマ帝国の加盟国が自由都市である。"
+ emp_hab_no_one_to_threaten_us_trigger_tooltip:1 "以下の神聖ローマ帝国領邦がない：\n  §Yヨーロッパ§!で§Y10§!以上の州を§Y国家§!またはその従属国（非朝貢国）が領有している。\n  §Yオーストリア§!の従属国ではない。"
+ emp_hab_no_one_to_threaten_us_trigger2_tooltip:1 "神聖ローマ帝国領邦が自由都市である。"
  emp_hab_empire_united_in_religion_title:0 "神聖帝国"
- emp_hab_empire_united_in_religion_desc:0 "神聖ローマ帝国の加盟国間の緊張は宗教の違いによって悪化している。もし、「神聖なる」ローマ帝国として主張する宗教権威を取り戻そうとするなら、宗教的統一性を回復させねばならない。"
- emp_hab_empire_united_in_religion_trigger_tooltip:0 "§Y[Root.Religion.GetName]§!でない神聖ローマ帝国加盟国がない。"
+ emp_hab_empire_united_in_religion_desc:0 "神聖ローマ帝国領邦間の緊張は宗教的違いによって悪化している。もし「神聖なる」ローマ帝国として主張する宗教権威を取り戻そうとするなら、宗教的統一性を回復させねばならない。"
+ emp_hab_empire_united_in_religion_trigger_tooltip:0 "§Y[Root.Religion.GetName]§!でない神聖ローマ帝国領邦がない。"
  emp_hab_empire_united_in_religion_effect_remove_tooltip:0 "オーストリアが神聖ローマ帝国の皇帝でなくなった場合、この補正は削除されます。"
  emp_hab_an_empire_roman_title:0 "ローマ帝国"
  emp_hab_an_empire_roman_desc:0 "ローマの街をその手中に収めない限り、神聖ローマ帝国は嘲笑の的になり続けるだろう。"
  emp_hab_empire_pass_reforms_title:0 "A.E.I.O.U."
  emp_hab_empire_pass_reforms_desc:1 "神聖ローマ帝国を強化して、強国として代表できる大領土を有する国家を作りあげねばならない。また、その国家は開戦自由の独占を強いることが可能なほど権威を集権化する必要がある。ーその時初めて、フリードリヒ３世が用いた標語：アウストリー・エスト・インペラエ・オーニ・ウニヴァーゾ（全世界を統べるのはオーストリアの王朝である）、に沿うことができるだろう。"
- emp_hab_empire_pass_reforms_trigger_tooltip:0 "下記の神聖ローマ帝国の全構成国：\n  §Yオーストリア§!の評価が§Y1§!以上である。"
+ emp_hab_empire_pass_reforms_trigger_tooltip:0 "下記の神聖ローマ帝国の全領邦：\n  §Yオーストリア§!の評価が§Y1§!以上である。"
  emp_hab_spread_dynasties_title:0 "[Root.GetSpreadDynastyOrFallbackMissionTitle]"
  emp_hab_spread_dynasties_desc:0 "[Root.GetHABDynastyOrFallbackMissionDesc]"
  emp_hab_spread_dynasties_has_dynasty_desc:0 "ハプスブルク家の者ができる限り多く王座に就くのは当然のことだ。我が一族のためにヨーロッパの王座を獲得せねばならない。"
@@ -684,7 +684,7 @@
  emp_bur_king_of_the_franks_effect_tooltip:1 "フランス地方の全ての§Yフランス§!の属国は§Y[Root.GetName]§!の属国となります。"
  emp_bur_influence_the_princes_title:0 "諸侯への影響力"
  emp_bur_influence_the_princes_desc:0 "過去において、我々は帝国の部外者であった。これは変わらなければならない。我々は帝国諸侯の地位を向上させるため、一丸となって努力する必要がある。"
- emp_bur_influence_the_princes_trigger_tooltip:1 " 下記の神聖ローマ帝国構成国：\n   §Y[Root.GetName]§!の評価が§Y60§!以上である。"
+ emp_bur_influence_the_princes_trigger_tooltip:1 " 下記の神聖ローマ帝国領邦：\n   §Y[Root.GetName]§!の評価が§Y60§!以上である。"
  emp_bur_feast_of_pheasants_title:0 "雉の饗宴"
  emp_bur_feast_of_pheasants_desc:0 "オスマン帝国の力の成長は憂慮すべきものだ。我々は新たな十字軍のため、再びヨーロッパの海岸から彼らを追い出すための軍勢を集めなければならない。"
  emp_bur_feast_of_pheasants_trigger_tooltip:1 " §Y[Root.GetName]§!の同盟国が§Yオスマン§!をライバル指定している"
@@ -2190,7 +2190,7 @@
  rivalled_or_rival_of:0 "ライバルであるか、§Y[Root.GetName]§!にライバル指定されている"
  cb_crusade_pheasants:0 "聖戦"
  cb_crusade_pheasants_desc:0 "奴らは呪われた異教徒だ！"
- emp_bur_influence_the_princes_trigger_tooltip2:1 " 下記の神聖ローマ帝国構成国：\n   §Y[Root.GetName]§!の評価が§Y60§!以上である。"
+ emp_bur_influence_the_princes_trigger_tooltip2:1 " 下記の神聖ローマ帝国領邦：\n   §Y[Root.GetName]§!の評価が§Y60§!以上である。"
  emp_bur_influence_the_princes_trigger_tooltip3:1 " 下記の国家：\n   首都が北ドイツまたは南ドイツ地方内にある。\n   §Y[Root.GetName]§!の評価が§Y60§!以上である。"
  emp_bur_lead_the_empire_fallback_trigger:0 "下記の国家が存在しない：\n  首都が北ドイツまたは南ドイツ地方内にある。\n  §Y10§!以上の州が国家またはその従属国（非朝貢国）によって領有されている。"
  emp_bur_dutch_revolt_has_happened:0 "§Yオランダの反乱§!が発生している。"
