--- a/source/localisation/opinions_l_english.yml
+++ b/source/localisation/opinions_l_english.yml
@@ -145,7 +145,7 @@
  opinion_ideas:0 "我々のアイデアに興味を持った"
  opinion_negotiated_rebels:0 "反乱軍と交渉した"
  opinion_suppressed_rebels:0 "反乱軍を鎮圧した"
- opinion_annex_part_of_empire:0 "神聖ローマ帝国の構成国を併合した"
+ opinion_annex_part_of_empire:0 "神聖ローマ帝国領邦を併合した"
  opinion_annex_vassal:0 "属国を併合した"
  sankin_kotai:0 "参勤交代"
  opinion_sword_hunt:0 "刀狩令"
