--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -6430,7 +6430,7 @@
  mys_reform_silk_industry_desc:0 "マイソールの経済は様々な点で堅調であるが、我々はベンガルとグジャラートの製糸業を羨望している。国内生産を改善し、支援する最良の方法は、他国がどのような軌跡を辿ったか学ぶため先方に諜報員を送り、その後自己流でこれらのものに擬態するための改革を実行する事であろう。我々自身の職人の優れた技術と共に、これは我々の経済を繁栄させるだろう。"
  mys_rockets:0 "ロケット！"
  mys_rockets_desc:0 "ロケット弾の使用はインドでは新しいものではないが、冶金学と化学の最近の進歩は我々に白兵戦におけるロケット弾使用の先駆者とした。我々の軍隊にこの新武器を身に着けさせ、確実にその使用を定期的に訓練する事により、どのような戦場、包囲戦や奇襲においても優勢となるであろう。"
- mys_reform_mysorean_army:0 "製糸業の改革"
+ mys_reform_mysorean_army:0 "マイソール陸軍の改革"
  mys_reform_mysorean_army_desc:0 "マイソールの兵士の勇気や兵器を疑う事は全くできないが、国軍を改善するかもしれない地域がある。他国が戦場で採用している革新的なものを観察するため、外国で調査を行う役人を先方に派遣しよう。訓練や規律、協調について、海外勢力の方法を全分野で採用する一方で、彼らをインドの戦場での現実に適応させる。"
  mys_dynamic_diplomacy:0 "活動的な外交"
  mys_dynamic_diplomacy_desc:0 "孤立して存在できる国などない、そして我々のような王国は多くの貪欲な宿敵を引き寄せる。我々の近隣諸国には我々がさらに力を持つことに貢献しようと思う国はほぼいないようなので、海外の同盟国を探す時だ。"
