--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -332,8 +332,8 @@
  WEFORCEDBREAKALLIANCE_FAVOR_BTN3:0 "移動"
  FORCEDBREAKALLIANCE_FAVOR_TITLE:0 "同盟を破棄させる"
  FORCEDBREAKALLIANCE_FAVOR_SETUP:0 "ある国が他国に好感度をもって同盟破棄を求めたとき"
- FORCEDBREAKALLIANCE_FAVOR_HEADER:0 "使者"
- FORCEDBREAKALLIANCE_FAVOR_1:0 "$ACTOR$"
+ FORCEDBREAKALLIANCE_FAVOR_HEADER:0 ""
+ FORCEDBREAKALLIANCE_FAVOR_1:0 "$ACTOR$からの使者"
  FORCEDBREAKALLIANCE_FAVOR_2:0 "$MONARCHTITLE$、国家$ACTOR$は"
  FORCEDBREAKALLIANCE_FAVOR_3:0 "好感度をもって$WITH|Y$ @$TAG$との"
  FORCEDBREAKALLIANCE_FAVOR_4:0 "同盟を破棄するように求めてきました。"
@@ -345,8 +345,8 @@
  FORCEDBREAKALLIANCE_FAVOR_BTN3:0 "移動"
  OTHERFORCEDBREAKALLIANCE_FAVOR_TITLE:0 "同盟を破棄させる"
  OTHERFORCEDBREAKALLIANCE_FAVOR_SETUP:0 "ある国が他国に同盟破棄を要求したとき"
- OTHERFORCEDBREAKALLIANCE_FAVOR_HEADER:0 "使者"
- OTHERFORCEDBREAKALLIANCE_FAVOR_1:0 "$ACTOR$"
+ OTHERFORCEDBREAKALLIANCE_FAVOR_HEADER:0 ""
+ OTHERFORCEDBREAKALLIANCE_FAVOR_1:0 "$ACTOR$からの使者"
  OTHERFORCEDBREAKALLIANCE_FAVOR_2:0 "$MONARCHTITLE$、国家$ACTOR$は"
  OTHERFORCEDBREAKALLIANCE_FAVOR_3:0 "$RECIPIENT$に好感度をもって$WITH|Y$@$TAG$との"
  OTHERFORCEDBREAKALLIANCE_FAVOR_4:0 "同盟を破棄するよう求めました。"
@@ -357,8 +357,8 @@
  OTHERFORCEDBREAKALLIANCE_FAVOR_BTN3:0 "移動"
  FORCEDALLYBREAKALLIANCE_FAVOR_TITLE:0 "同盟を破棄させる"
  FORCEDALLYBREAKALLIANCE_FAVOR_SETUP:0 "ある国が我々の同盟国に同盟破棄を要求したとき"
- FORCEDALLYBREAKALLIANCE_FAVOR_HEADER:0 "使者"
- FORCEDALLYBREAKALLIANCE_FAVOR_1:0 "$ACTOR$"
+ FORCEDALLYBREAKALLIANCE_FAVOR_HEADER:0 ""
+ FORCEDALLYBREAKALLIANCE_FAVOR_1:0 "$ACTOR$からの使者"
  FORCEDALLYBREAKALLIANCE_FAVOR_2:0 "$MONARCHTITLE$、国家$ACTOR$は"
  FORCEDALLYBREAKALLIANCE_FAVOR_3:0 "自国の同盟国である$RECIPIENT$に対して好感度をもって"
  FORCEDALLYBREAKALLIANCE_FAVOR_4:0 "@$TAG$$WITH|Y$との同盟を破棄するよう求めました。"
@@ -408,8 +408,8 @@
  RETURN_CORE_MAP:0 "返還された！"
  OTHER_RETURN_CORE_TITLE:0 "中核州の返還"
  OTHER_RETURN_CORE_SETUP:0 "ある国が好感度をもって他国に中核州を返還させたとき"
- OTHER_RETURN_CORE_HEADER:0 "使者"
- OTHER_RETURN_CORE_1:0 "$RECIPIENT$"
+ OTHER_RETURN_CORE_HEADER:0 ""
+ OTHER_RETURN_CORE_1:0 "$RECIPIENT$からの使者"
  OTHER_RETURN_CORE_2:0 "$RECIPIENT$はその州の一つを"
  OTHER_RETURN_CORE_3:0 "返還することに合意しました。"
  OTHER_RETURN_CORE_4:0 "理由は何であれ、今や$PROVINCE$州は"
@@ -458,8 +458,8 @@
  WE_REDUCED_OPINION_FAVOR_BTN3:0 "移動"
  REDUCED_OPINION_FAVOR_TITLE:0 "評価の減少"
  REDUCED_OPINION_FAVOR_SETUP:0 "ある国が我々に好感度をもって他国への評価を下げるよう要求したとき"
- REDUCED_OPINION_FAVOR_HEADER:0 "使者"
- REDUCED_OPINION_FAVOR_1:0 "$ACTOR$"
+ REDUCED_OPINION_FAVOR_HEADER:0 ""
+ REDUCED_OPINION_FAVOR_1:0 "$ACTOR$からの使者"
  REDUCED_OPINION_FAVOR_2:0 "$MONARCHTITLE$、国家$ACTOR$から好感度をもって"
  REDUCED_OPINION_FAVOR_3:0 "$WITH|Y$ @$TAG$への評価を"
  REDUCED_OPINION_FAVOR_4:0 "下げるよう求められました。"
@@ -470,8 +470,8 @@
  REDUCED_OPINION_FAVOR_BTN3:0 "移動"
  OTHER_REDUCED_OPINION_FAVOR_TITLE:0 "評価を減少させる"
  OTHER_REDUCED_OPINION_FAVOR_SETUP:0 "ある国が他国に対して第三国への評価を下げるよう要求したとき"
- OTHER_REDUCED_OPINION_FAVOR_HEADER:0 "使者"
- OTHER_REDUCED_OPINION_FAVOR_1:0 "$ACTOR$"
+ OTHER_REDUCED_OPINION_FAVOR_HEADER:0 ""
+ OTHER_REDUCED_OPINION_FAVOR_1:0 "$ACTOR$からの使者"
  OTHER_REDUCED_OPINION_FAVOR_2:0 "$MONARCHTITLE$、国家$ACTOR$が好感度をもって"
  OTHER_REDUCED_OPINION_FAVOR_3:0 "$RECIPIENT$に対して$WITH|Y$ @$TAG$への評価を"
  OTHER_REDUCED_OPINION_FAVOR_4:0 "下げるように求めました。"
@@ -482,8 +482,8 @@
  OTHER_REDUCED_OPINION_FAVOR_BTN3:0 "移動"
  NATION_REDUCED_OPINION_OF_US_FAVOR_TITLE:0 "評価を減少させる"
  NATION_REDUCED_OPINION_OF_US_FAVOR_SETUP:0 "ある国が我らの友好国に対して我々への評価を下げるよう要求したとき"
- NATION_REDUCED_OPINION_OF_US_FAVOR_HEADER:0 "使者"
- NATION_REDUCED_OPINION_OF_US_FAVOR_1:0 "$ACTOR$"
+ NATION_REDUCED_OPINION_OF_US_FAVOR_HEADER:0 ""
+ NATION_REDUCED_OPINION_OF_US_FAVOR_1:0 "$ACTOR$からの使者"
  NATION_REDUCED_OPINION_OF_US_FAVOR_2:0 "$MONARCHTITLE$、国家$ACTOR$は好感度をもって"
  NATION_REDUCED_OPINION_OF_US_FAVOR_3:0 "我が友人$RECIPIENT$に$WITH|Y$ @$TAG$の評価を"
  NATION_REDUCED_OPINION_OF_US_FAVOR_4:0 "減らすように求めました。"
@@ -527,8 +527,8 @@
  WE_TRADE_FAVORS_FOR_GOLD_BTN3:0 "移動"
  TRADE_FAVORS_FOR_GOLD_TITLE:0 "ダカットを好感度と交換する"
  TRADE_FAVORS_FOR_GOLD_SETUP:0 "ある国が我々に好感度をもって金銭を要求したとき"
- TRADE_FAVORS_FOR_GOLD_HEADER:0 "使者"
- TRADE_FAVORS_FOR_GOLD_1:0 "$ACTOR$"
+ TRADE_FAVORS_FOR_GOLD_HEADER:0 ""
+ TRADE_FAVORS_FOR_GOLD_1:0 "$ACTOR$からの使者"
  TRADE_FAVORS_FOR_GOLD_2:0 "$MONARCHTITLE$、国家$ACTOR$は"
  TRADE_FAVORS_FOR_GOLD_3:0 "好感度$FAVOR|Y$と引き換えに、収入$MONTHS$ヶ月分の金銭（$CASH|Y$¤）を"
  TRADE_FAVORS_FOR_GOLD_4:0 "求めてきました。"
@@ -539,8 +539,8 @@
  TRADE_FAVORS_FOR_GOLD_BTN3:0 "移動"
  OTHER_TRADE_FAVORS_FOR_GOLD_TITLE:0 "ダカットを好感度と交換する"
  OTHER_TRADE_FAVORS_FOR_GOLD_SETUP:0 "ある国が他国に好感度をもって金銭を求めたとき"
- OTHER_TRADE_FAVORS_FOR_GOLD_HEADER:0 "使者"
- OTHER_TRADE_FAVORS_FOR_GOLD_1:0 "$ACTOR$"
+ OTHER_TRADE_FAVORS_FOR_GOLD_HEADER:0 ""
+ OTHER_TRADE_FAVORS_FOR_GOLD_1:0 "$ACTOR$からの使者"
  OTHER_TRADE_FAVORS_FOR_GOLD_2:0 "$MONARCHTITLE$、国家$ACTOR$は"
  OTHER_TRADE_FAVORS_FOR_GOLD_3:0 "$RECIPIENT$に好感度$FAVOR|Y$と引き換えに"
  OTHER_TRADE_FAVORS_FOR_GOLD_4:0 "収入$MONTHS$ヶ月分の金銭（$CASH|Y$¤）を求めました。"
@@ -581,8 +581,8 @@
  WE_TRADE_FAVORS_FOR_MEN_BTN3:0 "移動"
  TRADE_FAVORS_FOR_MEN_TITLE:0 "人的資源を好感度と交換する"
  TRADE_FAVORS_FOR_MEN_SETUP:0 "ある国が我々に好感度をもって兵を求めたとき"
- TRADE_FAVORS_FOR_MEN_HEADER:0 "使者"
- TRADE_FAVORS_FOR_MEN_1:0 "$ACTOR$"
+ TRADE_FAVORS_FOR_MEN_HEADER:0 ""
+ TRADE_FAVORS_FOR_MEN_1:0 "$ACTOR$からの使者"
  TRADE_FAVORS_FOR_MEN_2:0 "$MONARCHTITLE$、国家$ACTOR$は、"
  TRADE_FAVORS_FOR_MEN_3:0 "好感度$FAVOR|Y$と引き換えに、供給量$MONTHS$ヶ月分の兵（$MEN|Y$）を"
  TRADE_FAVORS_FOR_MEN_4:0 "自国に求めてきました。"
@@ -593,8 +593,8 @@
  TRADE_FAVORS_FOR_MEN_BTN3:0 "移動"
  OTHER_TRADE_FAVORS_FOR_MEN_TITLE:0 "人的資源を好感度と交換する"
  OTHER_TRADE_FAVORS_FOR_MEN_SETUP:0 "ある国が他の国に好感度をもって兵を求めたとき"
- OTHER_TRADE_FAVORS_FOR_MEN_HEADER:0 "使者"
- OTHER_TRADE_FAVORS_FOR_MEN_1:0 "$ACTOR$"
+ OTHER_TRADE_FAVORS_FOR_MEN_HEADER:0 ""
+ OTHER_TRADE_FAVORS_FOR_MEN_1:0 "$ACTOR$からの使者"
  OTHER_TRADE_FAVORS_FOR_MEN_2:0 "$MONARCHTITLE$、国家$ACTOR$は、"
  OTHER_TRADE_FAVORS_FOR_MEN_3:0 "$RECIPIENT$に対し、好感度$FAVOR|Y$と引き換えに"
  OTHER_TRADE_FAVORS_FOR_MEN_4:0 "供給量$MONTHS$ヶ月分の兵を求めました。"
@@ -633,8 +633,8 @@
  WE_TRADE_FAVORS_FOR_SAILORS_BTN3:0 "移動"
  TRADE_FAVORS_FOR_SAILORS_TITLE:0 "水兵を好感度と交換する"
  TRADE_FAVORS_FOR_SAILORS_SETUP:0 "ある国が我々に好感度をもって水兵を求めたとき"
- TRADE_FAVORS_FOR_SAILORS_HEADER:0 "使者"
- TRADE_FAVORS_FOR_SAILORS_1:0 "$ACTOR$"
+ TRADE_FAVORS_FOR_SAILORS_HEADER:0 ""
+ TRADE_FAVORS_FOR_SAILORS_1:0 "$ACTOR$からの使者"
  TRADE_FAVORS_FOR_SAILORS_2:0 "$MONARCHTITLE$、国家$ACTOR$は、"
  TRADE_FAVORS_FOR_SAILORS_3:0 "好感度$FAVOR|Y$と引き換えに、供給量$MONTH$ヶ月分の水兵（$SAILORS|Y$）を"
  TRADE_FAVORS_FOR_SAILORS_4:0 "求めてきました。"
@@ -645,8 +645,8 @@
  TRADE_FAVORS_FOR_SAILORS_BTN3:0 "移動"
  OTHER_TRADE_FAVORS_FOR_SAILORS_TITLE:0 "水兵を好感度と交換する"
  OTHER_TRADE_FAVORS_FOR_SAILORS_SETUP:0 "ある国が他の国に好感度をもって水兵を求めたとき"
- OTHER_TRADE_FAVORS_FOR_SAILORS_HEADER:0 "使者"
- OTHER_TRADE_FAVORS_FOR_SAILORS_1:0 "$ACTOR$"
+ OTHER_TRADE_FAVORS_FOR_SAILORS_HEADER:0 ""
+ OTHER_TRADE_FAVORS_FOR_SAILORS_1:0 "$ACTOR$からの使者"
  OTHER_TRADE_FAVORS_FOR_SAILORS_2:0 "$MONARCHTITLE$、国家$ACTOR$は、"
  OTHER_TRADE_FAVORS_FOR_SAILORS_3:0 "$RECIPIENT$に好感度$FAVOR|Y$と引き換えに、供給量$MONTHS$ヶ月分の水兵（$SAILORS|Y$）を"
  OTHER_TRADE_FAVORS_FOR_SAILORS_4:0 "求めました。"
@@ -688,8 +688,8 @@
  WE_TRADE_FAVORS_FOR_HEIR_BTN3:0 "移動"
  TRADE_FAVORS_FOR_HEIR_TITLE:0 "親戚の後継者指名を要請する"
  TRADE_FAVORS_FOR_HEIR_SETUP:0 "ある国が我々に好感度をもって、その国の王朝に連なる者を自国の後継者に据えるよう求めたとき"
- TRADE_FAVORS_FOR_HEIR_HEADER:0 "使者"
- TRADE_FAVORS_FOR_HEIR_1:0 "$ACTOR$"
+ TRADE_FAVORS_FOR_HEIR_HEADER:0 ""
+ TRADE_FAVORS_FOR_HEIR_1:0 "$ACTOR$からの使者"
  TRADE_FAVORS_FOR_HEIR_2:0 "$MONARCHTITLE$、$ACTOR$は"
  TRADE_FAVORS_FOR_HEIR_3:0 "彼の国の王に連なる者を我が国の後継者に据えるよう"
  TRADE_FAVORS_FOR_HEIR_4:0 "$FAVOR|Y$の好感度と引き換えに頼みました。"
@@ -700,8 +700,8 @@
  TRADE_FAVORS_FOR_HEIR_BTN3:0 "移動"
  OTHER_TRADE_FAVORS_FOR_HEIR_TITLE:0 "親戚の後継者指名を要請する"
  OTHER_TRADE_FAVORS_FOR_HEIR_SETUP:0 "ある国が他国に好感度をもって、自身の王朝に連なる者を後継者に据えるよう求めたとき"
- OTHER_TRADE_FAVORS_FOR_HEIR_HEADER:0 "使者"
- OTHER_TRADE_FAVORS_FOR_HEIR_1:0 "$ACTOR$"
+ OTHER_TRADE_FAVORS_FOR_HEIR_HEADER:0 ""
+ OTHER_TRADE_FAVORS_FOR_HEIR_1:0 "$ACTOR$からの使者"
  OTHER_TRADE_FAVORS_FOR_HEIR_2:0 "$MONARCHTITLE$、$ACTOR$は"
  OTHER_TRADE_FAVORS_FOR_HEIR_3:0 "彼の国の王朝に連なる者を$RECIPIENT$の後継者に据えるよう"
  OTHER_TRADE_FAVORS_FOR_HEIR_4:0 "$FAVOR|Y$の好感度と引き換えに頼みました。"
@@ -744,8 +744,8 @@
  WE_TRADE_FAVORS_FOR_TRUST_BTN3:0 "移動"
  TRADE_FAVORS_FOR_TRUST_TITLE:0 "信頼を好感度と交換する"
  TRADE_FAVORS_FOR_TRUST_SETUP:0 "ある国が我々に好感度と引き換えにした信頼度を求めたとき"
- TRADE_FAVORS_FOR_TRUST_HEADER:0 "使者"
- TRADE_FAVORS_FOR_TRUST_1:0 "$ACTOR$"
+ TRADE_FAVORS_FOR_TRUST_HEADER:0 ""
+ TRADE_FAVORS_FOR_TRUST_1:0 "$ACTOR$からの使者"
  TRADE_FAVORS_FOR_TRUST_2:0 "$MONARCHTITLE$、$ACTOR$は自国に"
  TRADE_FAVORS_FOR_TRUST_3:0 "好感度$FAVOR|Y$と引き換えに信頼度$TRUST|Y$を"
  TRADE_FAVORS_FOR_TRUST_4:0 "求めました。"
@@ -756,8 +756,8 @@
  TRADE_FAVORS_FOR_TRUST_BTN3:0 "移動"
  OTHER_TRADE_FAVORS_FOR_TRUST_TITLE:0 "信頼を好感度と交換する"
  OTHER_TRADE_FAVORS_FOR_TRUST_SETUP:0 "ある国が他国に好感度をもって信頼度を求めたとき"
- OTHER_TRADE_FAVORS_FOR_TRUST_HEADER:0 "使者"
- OTHER_TRADE_FAVORS_FOR_TRUST_1:0 "$ACTOR$"
+ OTHER_TRADE_FAVORS_FOR_TRUST_HEADER:0 ""
+ OTHER_TRADE_FAVORS_FOR_TRUST_1:0 "$ACTOR$からの使者"
  OTHER_TRADE_FAVORS_FOR_TRUST_2:0 "$MONARCHTITLE$、国家$ACTOR$は$RECIPIENT$に"
  OTHER_TRADE_FAVORS_FOR_TRUST_3:0 "好感度$FAVOR|Y$と引き換えに信頼度$TRUST|Y$を"
  OTHER_TRADE_FAVORS_FOR_TRUST_4:0 "求めました。"
@@ -796,8 +796,8 @@
  WE_TRADE_FAVORS_FOR_WAR_PREP_BTN3:0 "移動"
  TRADE_FAVORS_FOR_WAR_PREP_TITLE:0 "戦争の準備を求める"
  TRADE_FAVORS_FOR_WAR_PREP_SETUP:0 "他国が我々に好感度をもって戦争の準備を求めたとき"
- TRADE_FAVORS_FOR_WAR_PREP_HEADER:0 "使者"
- TRADE_FAVORS_FOR_WAR_PREP_1:0 "$ACTOR$"
+ TRADE_FAVORS_FOR_WAR_PREP_HEADER:0 ""
+ TRADE_FAVORS_FOR_WAR_PREP_1:0 "$ACTOR$からの使者"
  TRADE_FAVORS_FOR_WAR_PREP_2:0 "$MONARCHTITLE$、$ACTOR$は"
  TRADE_FAVORS_FOR_WAR_PREP_3:0 "我々に戦争の準備をするよう"
  TRADE_FAVORS_FOR_WAR_PREP_4:0 "$FAVOR|Y$の好感度と引き換えに頼みました。"
@@ -808,8 +808,8 @@
  TRADE_FAVORS_FOR_WAR_PREP_BTN3:0 "移動"
  OTHER_TRADE_FAVORS_FOR_WAR_PREP_TITLE:0 "戦争の準備を求める"
  OTHER_TRADE_FAVORS_FOR_WAR_PREP_SETUP:0 "ある国が他国に好感度をもって戦争準備するよう求めたとき"
- OTHER_TRADE_FAVORS_FOR_WAR_PREP_HEADER:0 "使者"
- OTHER_TRADE_FAVORS_FOR_WAR_PREP_1:0 "$ACTOR$"
+ OTHER_TRADE_FAVORS_FOR_WAR_PREP_HEADER:0 ""
+ OTHER_TRADE_FAVORS_FOR_WAR_PREP_1:0 "$ACTOR$からの使者"
  OTHER_TRADE_FAVORS_FOR_WAR_PREP_2:0 "$MONARCHTITLE$、国家$ACTOR$は$RECIPIENT$に"
  OTHER_TRADE_FAVORS_FOR_WAR_PREP_3:0 "好感度$FAVOR|Y$と引き換えに戦争の準備を行うよう"
  OTHER_TRADE_FAVORS_FOR_WAR_PREP_4:0 "求めました。"
@@ -1263,9 +1263,9 @@
  DESTROY_GREAT_PROJECT:0 "Destroys the great project $NAME|Y$."
  MOVE_GREAT_PROJECT_INSTANTLY:0 "The $TYPE$ $NAME|Y$ moves to $PROVINCE|Y$."
  MODIFIER_GLOBAL_MONTHLY_DEVASTATION:0 "Global Monthly Devastation"
- MODIFIER_GLOBAL_PROPSPERITY_GROWTH:0 "Global Prosperity Growth"
- MODIFIER_LOCAL_PROPSPERITY_GROWTH:0 "Local Prosperity Growth"
- MODIFIER_MONTHLY_FAVOR_MODIFIER:0 "Monthly Favor Growth Modifier"
+ MODIFIER_GLOBAL_PROPSPERITY_GROWTH:0 "繁栄増加"
+ MODIFIER_LOCAL_PROPSPERITY_GROWTH:0 "州内繁栄増加"
+ MODIFIER_MONTHLY_FAVOR_MODIFIER:0 "月間好感度増加補正"
  ADD_FAVORS_EFFECT:0 "$WHOWITH|Y$ owes $AMOUNT|Y$ more favors to $WHOFOR|Y$"
  ADD_FAVORS_EFFECT_NEG:0 "$WHOWITH|Y$ owes $AMOUNT|Y$ less favors to $WHOFOR|Y$"
  WAR_LOSSES_TRIGGER:0 "$COUNTRY|Y$ $UNITTYPE$war losses $CAUSE$are at least $AMOUNT|Y$"
