Save/Update files [ci skip]

--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -414,7 +414,7 @@
  aramaic:0 "アラム"
  hebrew:0 "ヘブライ"
  scythian:0 "スキタイ"
- southern_african:0 "アフリカ南部"
+ southern_african:0 "南アフリカ"
  african:0 "東バントゥー"
  great_lakes_group:0 "アフリカ大湖沼"
  kongo_group:1 "コンゴ"
