Save/Update files [ci skip]

--- a/source/localisation/institutions_l_english.yml
+++ b/source/localisation/institutions_l_english.yml
@@ -39,7 +39,7 @@
  INSTI_PROVIDES:0 "国が受容する際に、以下の効果を得る。\n$BONUS$"
  MAPMODE_INSTITUTIONS:0 "制度"
  MAPMODE_INSTITUTIONS_DESC:0 "その州がすべての制度を受容しているかで色分けされます。緑は全ての制度を受容しており、黄色は受容の途中であり、赤は全く受容していません。"
- HAS_EMBRACED_INSTITUTION:0 "$NAME$：§YPresent§!"
+ HAS_EMBRACED_INSTITUTION:0 "$NAME$：§Y存在§!"
  EMBRACING_INSTITUTION:0 "$NAME$：§Y$VAL$%§!"
  NOT_EMBRACED:0 "が受容されていない："
  OPEN_CLOSE_INSTITUTIONS:0 "制度を開く/閉じる"
@@ -114,4 +114,4 @@
  tooltip_province_protestant_RB:0 "州がプロテスタント、聖公会、改革派のいずれかである"
  tooltip_owner_protestant:2 "交易会社でなく、国教がプロテスタント、聖公会または改革派"
  desc_birthplace_of_the_renaissance:0 "この州はルネサンスの中核で、今でもその発祥によって恩恵を受けている。"
- INSTITUTION_GREAT_POWER_BONUS:1 "$NUM|Y$種類の制度を受容していないことへのペナルティー：$BONUS$"
+ INSTITUTION_GREAT_POWER_BONUS:1 "$NUM|Y$つの制度を受容していないことによるペナルティー：$BONUS$"
