--- a/source/localisation/eldorado_l_english.yml
+++ b/source/localisation/eldorado_l_english.yml
@@ -233,7 +233,7 @@
  desc_sce_golden_cups:1 "枝から吊るされた黄金の杯は無かったものの、貴重な翡翠の鉱床は没落した街の下に眠っていた。時間と労力はかかるが、この資源を抽出することは最も価値のある試みである。"
  cannibal_conquistador:0 "人肉を食ったコンキスタドール"
  threatening_punishment:0 "処罰への脅し"
- seven_cities_events.300.t:0 "我々の間の女性"
+ seven_cities_events.300.t:0 "我々の中の女性"
  seven_cities_events.300.d:0 "$PROVINCENAME$で補給をしていると、若く妊娠している女性と、その夫で罠猟師として名高い男が、遠征隊の通訳兼案内役を志願してきた。女はいくつかの言語を話すことができ、男は腕のいい猟師でこの大陸についてのあらゆる知識を持っている。"
  seven_cities_events.300.a:0 "彼らを雇おう。"
  seven_cities_events.300.b:0 "必要ない。"
