--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -1560,9 +1560,9 @@
  EVILWEDISCOVERED_SETUP:0 "我々に対して諜報網を構築している者を発見したとき"
  EVILWEDISCOVERED_HEADER:0 "$MESSENGER$"
  EVILWEDISCOVERED_1:0 "我々はスパイを発見しました！"
- EVILWEDISCOVERED_2:0 ""
- EVILWEDISCOVERED_3:0 "$WHO$"
- EVILWEDISCOVERED_4:0 "が諜報網を構築していたところを発見しました。"
+ EVILWEDISCOVERED_2:0 "我々に以下を告げています。"
+ EVILWEDISCOVERED_3:0 "$WHO$の外交官が"
+ EVILWEDISCOVERED_4:0 "諜報網を構築していたところを発見しました。"
  EVILWEDISCOVERED_5:0 "外交官は追放され、多数のスパイが逮捕されました。"
  EVILWEDISCOVERED_6:0 "彼らの諜報網は$NEWVAL|Y$に縮小します。"
  EVILWEDISCOVERED_LOG:0 "$WHO$、$TARGET$での$ACTION$が発覚"
@@ -1573,10 +1573,10 @@
  EVILDISCOVEREDOTHER_SETUP:0 "秘密外交使節団が発見されたとき"
  EVILDISCOVEREDOTHER_HEADER:0 "$MESSENGER$"
  EVILDISCOVEREDOTHER_1:0 "スパイを発見！"
- EVILDISCOVEREDOTHER_2:0 ""
- EVILDISCOVEREDOTHER_3:0 "$WHO$"
- EVILDISCOVEREDOTHER_4:0 "が諜報網を構築していたところを発見しました。"
- EVILDISCOVEREDOTHER_5:0 "$RECIPIENT$"
+ EVILDISCOVEREDOTHER_2:0 "我々に以下を告げています。"
+ EVILDISCOVEREDOTHER_3:0 "$WHO$の外交官が"
+ EVILDISCOVEREDOTHER_4:0 "$RECIPIENT$にて"
+ EVILDISCOVEREDOTHER_5:0 "諜報網を構築していたところを発見しました。"
  EVILDISCOVEREDOTHER_6:0 "外交官は追放され、多数のスパイが逮捕されました。"
  EVILDISCOVEREDOTHER_LOG:0 "$WHO$、$TARGET$での$ACTION$が発覚"
  EVILDISCOVEREDOTHER_BTN1:0 "OK"
@@ -4113,10 +4113,10 @@
  INDEPENDANCE_SETUP:0 "ある国が独立を宣言したとき"
  INDEPENDANCE_HEADER:0 ""
  INDEPENDANCE_1:0 "$ACTOR$からの使者"
- INDEPENDANCE_2:0 "彼らはついに"
- INDEPENDANCE_3:0 "彼らの抑圧者を圧倒し、"
- INDEPENDANCE_4:0 "彼らの足かせを捨てました。"
- INDEPENDANCE_5:0 "彼らは$OPRESSOR$の元君主から独立を宣言しており、非常に長い年月の中で初めて自由を体験しています。"
+ INDEPENDANCE_2:0 "彼らはついに抑圧者を打ち負かし、足かせを外すことに成功しました。"
+ INDEPENDANCE_3:0 "彼らは元宗主である"
+ INDEPENDANCE_4:0 "$OPRESSOR$から"
+ INDEPENDANCE_5:0 "独立を宣言しており、非常に長い年月の中で初めての自由を今体験しています。"
  INDEPENDANCE_LOG:0 "$ACTOR$、$OPRESSOR$からの独立を宣言"
  INDEPENDANCE_BTN1:0 "OK"
  INDEPENDANCE_BTN2:0 "OK"
@@ -6433,7 +6433,7 @@
  OTHERFORCEDBREAKALLIANCE_1:0 "$ACTOR$からの使者"
  OTHERFORCEDBREAKALLIANCE_2:0 "$MONARCHTITLE$、列強$ACTOR$は"
  OTHERFORCEDBREAKALLIANCE_3:0 "$RECIPIENT$に"
- OTHERFORCEDBREAKALLIANCE_4:0 "$WITH|Y$@$TAG$との同盟を破棄させた。"
+ OTHERFORCEDBREAKALLIANCE_4:0 "$WITH|Y$@$TAG$との同盟を破棄させました。"
  OTHERFORCEDBREAKALLIANCE_6:0 "先の見えない不安感が残ります…"
  OTHERFORCEDBREAKALLIANCE_LOG:0 "$ACTOR$、$RECIPIENT$に$WITH$との同盟破棄を強要"
  OTHERFORCEDBREAKALLIANCE_BTN1:0 "OK"
@@ -6445,7 +6445,7 @@
  FORCEDALLYBREAKALLIANCE_1:0 "$ACTOR$からの使者"
  FORCEDALLYBREAKALLIANCE_2:0 "$MONARCHTITLE$、列強$ACTOR$は"
  FORCEDALLYBREAKALLIANCE_3:0 "我が国の同盟国$RECIPIENT$に"
- FORCEDALLYBREAKALLIANCE_4:0 "$WITH|Y$@$TAG$との同盟を破棄させた。"
+ FORCEDALLYBREAKALLIANCE_4:0 "$WITH|Y$@$TAG$との同盟を破棄させました。"
  FORCEDALLYBREAKALLIANCE_6:0 "我が国はこのことをわずかでも忘れない！"
  FORCEDALLYBREAKALLIANCE_LOG:0 "$ACTOR$、$RECIPIENT$に我が国との同盟破棄を強要"
  FORCEDALLYBREAKALLIANCE_BTN1:0 "OK"
@@ -6732,7 +6732,7 @@
  OVERLORD_CHANGED_TRIBUTE_SETUP:0 "我々の宗主国が要求する貢物を変更したとき"
  OVERLORD_CHANGED_TRIBUTE_HEADER:0 ""
  OVERLORD_CHANGED_TRIBUTE_1:0 "$OVERLORD$からの使者"
- OVERLORD_CHANGED_TRIBUTE_2:0 "は、彼らの要求する貢物を変更することを決断しました。"
+ OVERLORD_CHANGED_TRIBUTE_2:0 "は、要求する貢物を変更することを決めました。"
  OVERLORD_CHANGED_TRIBUTE_3:0 "今年の終わりまで、彼らは"
  OVERLORD_CHANGED_TRIBUTE_4:0 "$DEMAND$を要求するでしょう。"
  OVERLORD_CHANGED_TRIBUTE_5:0 "$ESTIMATE_TRIBUTE_AMOUNT$"
@@ -6744,10 +6744,10 @@
  INVALID_TRADING_POLICY_TITLE:0 "交易政策が変更された！"
  INVALID_TRADING_POLICY_SETUP:0 "交易政策がもはや維持できず、デフォルトに変更されたとき"
  INVALID_TRADING_POLICY_HEADER:0 "商人からの報告"
- INVALID_TRADING_POLICY_1:0 "$NAME|Y$における"
- INVALID_TRADING_POLICY_2:0 "$NAME|Y$"
- INVALID_TRADING_POLICY_3:0 "もはや維持が困難であり"
- INVALID_TRADING_POLICY_4:0 "$NEW|Y$"
+ INVALID_TRADING_POLICY_1:0 "$OLD|Y$交易政策は"
+ INVALID_TRADING_POLICY_2:0 "$NAME|Y$において"
+ INVALID_TRADING_POLICY_3:0 "もはや維持が困難であり、以降は"
+ INVALID_TRADING_POLICY_4:0 "$NEW|Y$に変わります。"
  INVALID_TRADING_POLICY_LOG:0 "$NAME$の交易政策が変更"
  INVALID_TRADING_POLICY_BTN1:0 "OK"
  INVALID_TRADING_POLICY_BTN2:0 "OK"
