--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -171,9 +171,9 @@
  NEWCOLONIALCOUNTRY_SETUP:0 "ある国の海外州から植民地国家が形成されたとき"
  NEWCOLONIALCOUNTRY_HEADER:0 "$MESSENGER$"
  NEWCOLONIALCOUNTRY_1:0 "新たな植民地国家！"
- NEWCOLONIALCOUNTRY_2:0 "$NAME$が"
- NEWCOLONIALCOUNTRY_3:0 "海外州である"
- NEWCOLONIALCOUNTRY_4:0 "$REGION$の$COUNTRY$領から形成されました。"
+ NEWCOLONIALCOUNTRY_2:0 "$NAME$"
+ NEWCOLONIALCOUNTRY_3:0 "$REGION$の$COUNTRY$領である"
+ NEWCOLONIALCOUNTRY_4:0 "海外州から形成されました。"
  NEWCOLONIALCOUNTRY_5:0 "新国家は母国から独立した領土ですが、遠い将来、管理に失敗した際には自由を奪われるかもしれません。"
  NEWCOLONIALCOUNTRY_6:0 ""
  NEWCOLONIALCOUNTRY_LOG:0 "$NAME$、$REGION$で形成"
