--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -1250,7 +1250,7 @@
  zim_dominate_upstream_trade_title:0 "アデンの富"
  zim_dominate_upstream_trade_desc:1 "極東アジアとの交易の歴史はあったが、この昔の交易関係を復活できる可能性はまずない。けれども、恐れる理由などない。東アジア交易の富は、インドを経由し、ホルムズ湾やアデン湾に到達する。ホルムズは非常に遠いかもしれないが、アデン湾であれば手が届くだろう。自国がすべきことは…アフリカの角沿岸部の解放である。"
  zim_dominate_upstream_trade_at:0 "§Yアフリカの角§!地方にある§Y沿岸§!州である。"
- zim_dominate_upstream_trade_ct:0 "交易収入§G２年分§!を獲得する。"
+ zim_dominate_upstream_trade_ct:0 "交易収入§G2年分§!を獲得する。"
  zim_dominate_upstream_trade_tt:0 "ムタパ交易の影響"
  zim_zanzibar_greatest_market_title:0 "東アフリカの独占"
  zim_zanzibar_greatest_market_desc:0 "交易が繁盛し、国庫が満たされていっているが、不十分である。豊かさにおいて、過去のと現在ではまだいい勝負だ。これを変える必要がある！東アフリカ沿岸部のダカットの流れを制御し、重要な交易中心地を独占し、インドやアジアからの外来交易品をできるだけ多く自国市場へ誘導すべきだ。"
@@ -1343,7 +1343,7 @@
  zan_colonize_the_cape_desc:0 "西方への交易流通の制御をしたければ、大陸南端が極めて重要だ。全ての交易を統制するため、その地に恒久的な駐留を確立せねばならない。"
  zan_settle_trade_posts_title:0 "アフリカの交易所"
  zan_settle_trade_posts_desc:0 "北や西に交易の流れにおいて注目すべき場所がたくさんある。その地を領有し、自国が交易を掌握しておかねばならない。"
- zan_establish_contact_with_persia_title:0 "ペルシアとの再接続"
+ zan_establish_contact_with_persia_title:0 "ペルシアとの再交流"
  zan_establish_contact_with_persia_desc:0 "我が祖先のアリ・イブン・アルハッサン・シラジは、シーラーズのペルシア・アミールの子息だったことが知られている。祖先の起源とのつながりを再度構築せねばならない。"
  zan_build_workshops_title:0 "象牙生産の増加"
  zan_build_workshops_desc:0 "象牙はいつの時代も自国の主要な収入源の一つだ。その生産量を増やすために可能な限りあらゆる努力をせねばならない。"
@@ -1365,19 +1365,19 @@
  zan_transport_fleet_title:0 "侵略準備"
  zan_transport_fleet_desc:1 "マダガスカル島は、自国の海岸の前方すぐにある、無視するにはあまりにもオイシイ獲物だ。おまけにあそこは異教徒だらけである。軍隊と艦隊を召集し、奪い取る準備をしなければならない。"
  zan_conquer_madagascar_title:1 "マダガスカル侵略"
- zan_conquer_madagascar_desc:0 "With our army and fleet at the ready, it is time we make our move and cleanse that island of infidels, and take control of it to exploit its riches."
+ zan_conquer_madagascar_desc:0 "軍と艦隊の準備が整った今こそ動き出し、あの島から異教徒どもを浄化し、その地の富を利用するため、支配権を得る時だ。"
  zan_dominate_the_malacca_trade_title:0 "マラッカとの交易"
- zan_dominate_the_malacca_trade_desc:0 "Traders always come to us telling strange stories of the mysterious East and the Spice Islands. We must expand our influence towards those areas and take control of that trade ourselves."
+ zan_dominate_the_malacca_trade_desc:0 "交易商たちはいつもやって来ては、不思議な東洋や香料諸島について語る。その地域に勢力を拡大し、その交易を自身の手に掌握せねばならない。"
  zan_trade_with_china_title:0 "中国との交易"
- zan_trade_with_china_desc:1 "The Far East is the source of immeasurable riches of legend. We must have a strong trade presence there if we are to take part in them."
+ zan_trade_with_china_desc:1 "極東は、計り知れないほど豊かな伝説の源泉だ。そこへ参入したいなら、その地に強力な交易の駐留地を持たねばならない。"
  zan_trade_of_the_east_title:0 "インド市場への到達"
- zan_trade_of_the_east_desc:0 "India has always seen a great flow of trade through it. We can't be left outside this wealth, we must also establish our presence in the Indian markets."
+ zan_trade_of_the_east_desc:0 "インドにはいつの時代も交易に関する大量の流通がある。この富の外側に置かれるわけにはいかないし、インド市場での存在感の確立もせねばならない。"
  zan_explore_the_malacca_trade_title:0 "インド洋の探検"
- zan_explore_the_malacca_trade_desc:1 "India has proved to be a great source of riches. Who knows what other lands could lay beyond the ocean, waiting to be exploited? We must make an effort to explore the ocean in search of those possible sources of even more wealth."
+ zan_explore_the_malacca_trade_desc:1 "インドは富の宝庫であることが証明された。この海の先に待ち受けている大地、そして開拓を待ちわびているものを一体誰が知っているというのか？大海原を探検し、さらなる富の源泉を求める努力をせねばならないのだ。"
  zan_dominate_moluccas_title:0 "モルッカ諸島との交易"
- zan_dominate_moluccas_desc:0 "Now that we control the trade flowing through the Strait of Malacca, it is time we go even further, into the Spice Islands themselves. Only by doing that can we really control the whole trade flow and its riches."
+ zan_dominate_moluccas_desc:0 "マラッカ海峡を流れる交易を制御できた以上、さらにその先の香料諸島に行く時だ。そうすることで、交易の流れ全体とその富を制御できる。"
  zan_colonize_australia_title:0 "オーストラリアの植民地化"
- zan_colonize_australia_desc:0 "We have expanded ourselves to distances and lands never before imagined. We must go still even further, to the mysterious Southern Lands that we had heard about and that are clearly within our reach."
+ zan_colonize_australia_desc:0 "これまで想像もしなかったような遠方や土地へと拡張していった。まだまださらに前進せねばならない。謎めいた南方の大地について耳にしたことがあり、それは明らかに我が手の届くところにある。"
  aju_merchants_in_india:0 "インドのアジューラーンの存在"
  desc_aju_merchants_in_india:0 "自国の商人はインドで精力的に活動しており、自国の利益のためにインドの者たちとその地で交易している。"
  aju_exotic_zoo:0 "異国情緒あふれる動物園"
@@ -1394,13 +1394,13 @@
  desc_aju_united_somali_clans:0 "この州のソマリア人は、宗主により団結した。"
  aju_mogadishu_currency:0 "アジューラーンの投資"
  desc_aju_mogadishu_currency:0 "アジューラーンの商人たちが自国に留まり、自国の生産への投資について認可することを決定した。"
- zan_establish_contact_with_persia_at:0 "Have at least §Y1§! regiment of any kind stationed in the province §Y[2218.GetName]§!."
- zan_establish_contact_with_persia_bt:1 "The owner of §Y[2218.GetName]§! is either an ally or a subject of §Y[Root.GetName]§!."
- zan_build_manufactories_ct:0 "Up to §Y6§! owned provinces with a §YManufactory§! gain §G2§! Production."
- zan_explore_the_malacca_trade_tt:0 "§Y[Root.GetName]§! gains permanent claims on the islands §YSumatra§! and §YJava§!."
- zan_conquer_madagascar_tt:0 "Every province of §YMadagascar§! owned by [Root.GetName] or its subjects get the province modifier '§YSwahili Overtaking§!' for §Y25 years§!, giving the following events:\nLocal Missionary Strength: §G+2.0%§!\nLocal Goods Produced: §G+0.25§!"
+ zan_establish_contact_with_persia_at:0 "§Y[2218.GetName]§!州上に任意の種類のユニットが§Y1§!連隊以上駐屯している。"
+ zan_establish_contact_with_persia_bt:1 "§Y[2218.GetName]§!の所有者が、§Y[Root.GetName]§!の同盟国もしくは従属国のいずれかである。"
+ zan_build_manufactories_ct:0 "§Y工場§!が建造されている領有州の内、最大§Y6§!州が§G2§!の生産を獲得する。"
+ zan_explore_the_malacca_trade_tt:0 "§Y[Root.GetName]§!は、§Yスマトラ§!島及び§Yジャワ§!島に恒久的な請求権を獲得する。"
+ zan_conquer_madagascar_tt:0 "[Root.GetName]もしくはその従属国が領有する§Yマダガスカル§!の全州は§Y25年間§!、州補正「§Yスワヒリの占領§!」を獲得し、以下のイベントを獲得する：\n州の布教強度：§G+2.0%§!\n州の生産財：§G+0.25§!"
  zan_colonize_the_cape_ct:0 "§Y[Root.GetName]§! gains a permanent claim on every province with a §YCenter of Trade§! in the §YKongo§! and §YCentral Africa§! region."
- zan_settle_trade_posts_ct:0 "Gain §G4 years§! worth of Trade Income."
+ zan_settle_trade_posts_ct:0 "交易収入§G4年分§!を獲得する。"
  ZAN_DOMINATION:0 "キルワ商人の支配"
  eth_legacy_of_alexandria:0 "アレクサンドリアの遺産"
  desc_eth_legacy_of_alexandria:0 "アレクサンドリア図書館は何世紀も前に焼失したが、この都市には今でも非常に重要な図書館があり、それによって、自国の聖職者や思想家にとってかけがえのない知識をもたらしてくれる。"
@@ -1808,17 +1808,17 @@
  desc_oyo_empire:0 "We have become a true Empire, nobody shall deny that."
  oyo_shaman_gathering:0 "Shaman Gathering"
  desc_oyo_shaman_gathering:0 "The different shamans in our faith are able to weave a unified vision of our country's beliefs."
- zan_kilwan_embassy:0 "Kilwan Embassy"
- desc_zan_kilwan_embassy:0 "This province houses the embassy from Kilwa and serves as the Persian-African diplomatic connection.\n\n§YThe modifier gets removed should the owner of the province change.§!"
- zan_persian_embassy:0 "Persian Embassy"
+ zan_kilwan_embassy:0 "キルワ大使館"
+ desc_zan_kilwan_embassy:0 "この州にはキルワからの大使館があり、ペルシアとアフリカの外交窓口となっている。\n\n§Y州の所有者が変わった場合、この補正は削除される。§!"
+ zan_persian_embassy:0 "ペルシア大使館"
  desc_zan_persian_embassy:1 "This province houses the embassy from [2218.Owner.GetName] and serves as the Persian-African diplomatic connection.\n\n§YThe modifier gets removed should the owner of the province change.§!"
- zan_embassy_desc:1 "lasts until the province owner changes"
- zan_expansion_into_the_cape:0 "Expansion into the Cape"
- desc_zan_expansion_into_the_cape:0 "Adventurers and explorers of our country volunteered to expand into the south of Africa to uncover its hidden riches."
- zan_great_kilwa:0 "Great Kilwa"
- desc_zan_great_kilwa:0 "The city of Great Kilwa has received major development and restorations. Now it is the pearl of the Swahili Coast."
- zan_kilwan_trade_dominance:0 "Kilwan Trade Dominance"
- desc_zan_kilwan_trade_dominance:0 "Our merchants are dominating the trade of the Gulf of Aden. Now they expand their influence in other trade nodes for our benefit."
+ zan_embassy_desc:1 "州の所有者が変更されるまで継続する"
+ zan_expansion_into_the_cape:0 "ケープへの進出"
+ desc_zan_expansion_into_the_cape:0 "自国のの冒険家や探検家たちは、その地に隠された富を掘り起こすため、自ら進んでアフリカ南部へと進出した。"
+ zan_great_kilwa:0 "大キルワ"
+ desc_zan_great_kilwa:0 "都市大キルワは大規模な開発・修繕が行われた。現在ではスワヒリ海岸の真珠とも言える存在となっている。"
+ zan_kilwan_trade_dominance:0 "キルワの交易支配"
+ desc_zan_kilwan_trade_dominance:0 "自国の商人がアデン湾交易を支配している。今、彼らは自国の利益のため、他の交易拠点へその影響力を拡大している。"
  zan_master_of_the_trade:0 "交易の主"
  desc_zan_master_of_the_trade:0 "我々の他に通商でここまでの高みへと達した国はない。我々こそがアフリカとアジアの決定的な交易の主なのだ！"
  zan_conversion_of_fetishist:0 "スワヒリの占領"
@@ -1846,22 +1846,22 @@
  kon_great_power:0 "列強への優位"
  desc_kon_great_power:0 "あらゆる予想を覆し、自国は世界の列強を相手に決定的勝利を収めた！[Root.GetName]に栄光あれ！"
  east_africa_economic_base_title:0 "経済基盤の構築"
- east_africa_economic_base_desc:0 "In order for our people to progress, we need to set a good and solid economic foundation. Let's save gold and create some money-generating businesses."
+ east_africa_economic_base_desc:0 "自国民が進歩するためには、しっかりとした経済的基盤を整える必要がある。金を貯め、金を生み出す商売を生み出そう。"
  east_africa_trade_consolidation_title:0 "交易の統合"
- east_africa_trade_consolidation_desc:0 "Our lands and surrounding ones are full of resources that other nations desire. We can definitely make their wishes come true. For a price, of course."
+ east_africa_trade_consolidation_desc:0 "自領及びその周辺には、他国垂涎の資源が大量にある。彼らの願いを間違いなく実現できる。もちろん、対価は貰うが。"
  east_africa_dominate_tn_title:0 "交易ノードの支配"
- east_africa_dominate_tn_desc:0 "As an emerging trading nation, we need to control the biggest trade hubs in our area to ensure this dominance."
+ east_africa_dominate_tn_desc:0 "新興の交易国家として、この優位性の確保のためには、地域内最大の交易拠点を管理する必要がある。"
  east_africa_trading_navy_title:0 "交易海軍"
- east_africa_trading_navy_desc:0 "Our main trading partners are far away from us. By building ships we can sail to their shores instead of waiting for them to come to us and set the conditions for selling ourselves."
+ east_africa_trading_navy_desc:0 "主だった交易相手国は遠く離れている。船舶を建造することで、彼らの来訪を待つのではなく、先方の海岸まで出航し、自国を売り込むための条件を整えることができる。"
  east_africa_commercial_treaties_title:0 "商業の盟約"
- east_africa_commercial_treaties_desc:1 "Traditionally our main trading partners have been from Arabia or Southern India. If we send out our merchants and create a strong presence in their own home markets, we will be able to negotiate from a more powerful position."
- east_africa_zheng_he_title:0 "鄭和の反転"
- east_africa_zheng_he_desc:0 "Not so long ago, an admiral from the far away nation of China visited our shores. Even today, there are descendants of the sailors of that fleet that stayed in our lands. Our nation is mighty now and we can visit them back. This will not only be a courtesy visit, but a way to ensure a constant supply of china for our realm."
+ east_africa_commercial_treaties_desc:1 "従来、自国の主な交易相手と言えばアラビアや南インドだった。商人を派遣して、彼らの地元市場で強い存在感を生み出すことができたなら、さらに強力な立場で交渉ができるようになるだろう。"
+ east_africa_zheng_he_title:0 "鄭和を逆に辿れ"
+ east_africa_zheng_he_desc:0 "少し前に、遥か遠くの中国から一人の提督が自国の海岸を訪れた。今でも、その船団の水兵の子孫が領内に滞在している。自国はは今や強大な国であり、彼らを再び訪問できる。これは単なる表敬訪問ではなく、自国に中国の恒常的な供給を確保するための方法である。"
  chinese_trade_agreement:0 "中国との交易協定"
  east_africa_rising_lion_title:0 "昇り獅子"
- east_africa_rising_lion_desc:0 "No nation is respected if there is not a powerful army defending it. We will draft the best men in our lands and create a mighty army that will make everyone think twice before angering us."
+ east_africa_rising_lion_desc:0 "どんな国でも、防衛する強力な軍隊がなければ、尊敬されることはない。自領内で最上の男性を徴兵し、誰もが自国を怒らせる前に二度考えるようになる強力な軍隊を創設する。"
  east_africa_hear_me_roar_title:0 "我が哮りを聞け"
- east_africa_hear_me_roar_desc:0 "A domineering trading nation needs two things to enforce its will: ports and land. We need to control both the land and the sea."
+ east_africa_hear_me_roar_desc:0 "支配的な交易国家がその意志を貫くには二つのものが必要だ。港と土地である。陸と海、両方の支配が必要だ。"
  east_africa_international_influence_title:0 "国際的な影響力"
  east_africa_international_influence_desc:1 "Our strength is obvious, but if other countries do not recognize our greatness, its value is lower. We shall send embassies to other great nations and be recognized as a true power."
  international_influence.tooltip:0 "At least §Y2§! Great Powers:\nAlliance with §Y[Root.GetName]§!.\nHave at least §Y150§! opinion of §Y[Root.GetName]§!."
@@ -2312,11 +2312,11 @@
  persian_embassy_holder_adjective:0 "[persian_embassy_holder.GetAdjective]"
  kilwan_embassy_holder_religion:0 "[kilwan_embassy_holder.Religion.GetName]"
  persian_embassy_holder_religion:0 "[persian_embassy_holder.Religion.GetName]"
- flavor_zan.8.t:0 "Send an embassy to Persia?"
- flavor_zan.8.desc:0 "Some stories and legends recount the origin of Shirazi people, now inhabiting our country but originating in the distant land of Eran, far away from Kilwa. Now our traders have engaged with people at the other side of a strait called Hormuz, speaking a language called Farsi, that may lead us to this legendary territory. Then, my sultan, shall we send an embassy to this overseas, far away land, to ascertain if these stories are true? Or maybe it's a risk sending them into the mainland, and we should be content with our ongoing trade activity in known seas?"
- flavor_zan.8.a:0 "Send an ambassador to Persia"
- flavor_zan.8.a.tt:1 "We will ask §Y[2218.Owner.GetName]§! to establish a [Root.GetAdjective] embassy in §Y[2218.GetName]§! in exchange for a [2218.Owner.GetAdjective] embassy in §Y[Root.Capital.GetName]§!.\n[2218.Owner.GetName] might refuse completely if their Primary Culture is NOT §YPersian§!."
- flavor_zan.8.b:1 "It's not really worth it"
+ flavor_zan.8.t:0 "ペルシアに使節団を派遣する？"
+ flavor_zan.8.desc:0 "いくつかの物語や伝説によると、現在では自国に住んでいますが、キルワから遠く離れた土地エランに由来するという、シラジ族の起源が詳述されています。今、自国の交易商はホルムズと呼ばれる海峡の向こう側にいて、ファルシ語と呼ばれる言語を話す人々と関わりを持っており、この伝説の地に自国を導いてくれるかもしれません。では、我がスルタン、この話が本当かどうか究明するため、この海の先にある遠い異国の地に使節団を送りましょうか？それとも、恐らく本土から使節団を派遣するのは危険ですから、よく知る海域での交易活動の実行で満足としておくべきですかね？"
+ flavor_zan.8.a:0 "ペルシアに大使を派遣せよ"
+ flavor_zan.8.a.tt:1 "§Y[Root.Capital.GetName]§!の[2218.Owner.GetAdjective]大使館と引き換えに、§Y[2218.GetName]§!の[Root.GetAdjective]大使館設立を§Y[2218.Owner.GetName]§!に依頼する。\n[2218.Owner.GetName]は、彼らの主要文化が§Yペルシャ§!でない場合、完全に拒否するかもしれない。"
+ flavor_zan.8.b:1 "あまり価値がないな"
  flavor_zan.9.t:0 "A [From.GetAdjective] ambassador meets us"
  flavor_zan.9.desc:0 "My lord, an embassy coming from a distant land to the south in the ocean, that some name Zanj, says that they have come to our country to gather information about the origins of their own, which is called Kilwa, also saying that they may be Farsi people. Should we accept this embassy, establishing a regular diplomatic relationship with them?"
  flavor_zan.9.a:0 "Welcome him!"
@@ -2354,12 +2354,12 @@
  flavor_zan.19.desc:1 "The idea of sending an embassy to the distant lands of [OppositeEmbassyHolderName] was set to look for the origins of Shirazi people. After so many years, we are sure that we have found the land where they came from. That could also give us a legitimate claim in the eyes of our people to those distant, but rich, lands, where we could also establish a foothold on the Asian mainland. My [Root.Monarch.GetTitle], should we pursue these ambitious claims?"
  flavor_zan.19.a:0 "We must press the claims of Shirazi origins!"
  flavor_zan.19.b:1 "I don't think it's wise to press those claims."
- flavor_zan.20.t:0 "Mogadishu admits defeat"
- flavor_zan.20.desc:0 "We have defeated the trade entrepot of Mogadishu, and then we can take as much plunder as we want from them!"
- flavor_zan.20.a:0 "Plundering is the best part of life!"
- flavor_zan.21.t:1 "Trade Route to China"
- flavor_zan.21.desc:1 "Due to our presence in Malacca, our merchants managed to get the knowledge of a naval trade route to China!"
- flavor_zan.21.a:0 "Go East!"
+ flavor_zan.20.t:0 "モガディシュが敗北を認める"
+ flavor_zan.20.desc:0 "交易の集積地であるモガディシュを打ち倒しました。すなわち、あとは望むだけ略奪し放題です！"
+ flavor_zan.20.a:0 "略奪って人生の醍醐味だよな！"
+ flavor_zan.21.t:1 "中国との交易路"
+ flavor_zan.21.desc:1 "マラッカに進出していたので、自国の商人たちは中国への交易海路の知識を得ることができたのです！"
+ flavor_zan.21.a:0 "いざ、東へ！"
  flavor_msi.1.t:0 "The Mossi Confederal Kingdom"
  flavor_msi.1.d:0 "The Mossi Kingdoms are now united for the first time in generations, but it hasn't always been like this. Our elders tell the story of princess Yennega, who fled to these lands from the Mamprussi city of Gambaga, and his son Wedraogo, who founded the city of Tenkodogo. He then would have another three sons. The older, Diaba, was also the founder of Fada N'gourma. The second son, Rawa, founded the kingdom of Zondoma. The last son, Zoungrana, became ruler of Tenkodogo, and also had a son, named Oubri, who was himself the founder of Wagadugu. These are the origins of the Mossi people, and as a result of them, we, the Mossi, have organized ourselves into independent kingdoms. But now it's time to have a common government, even if we respect the origins and differences of each one of the Mossi Kingdoms."
  flavor_msi.1.a:0 "It is time to have a united Mossi Confederal Kingdom, then."
