Save/Update files [ci skip]

--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -3298,8 +3298,8 @@
  LORD_HIGH_ADMIRAL_fem:0 "海軍司令長官"
  SUPREME_ADMIRAL_fem:0 "最高海軍元帥"
  SISTER:0 "姉妹"
- FIRST_RANGER_fem:0 "Lady Ranger"
+ FIRST_RANGER_fem:0 "女性レンジャー"
  MAGISTER_HOCHMEISTER_fem:0 "騎士団女総長"
  DEUTSCHMEISTER_fem:0 "ドイツ騎士団女総長"
- COMMANDER_EMPRESS:0 "Imperial Commanderess"
+ COMMANDER_EMPRESS:0 "帝国女性司令官"
  incidents_bur_inheritance.102.c.tt:0 "§Y低地諸国§!に首都がある§Y[BUR.GetName]§!の従属国が全て独立し、神聖ローマ帝国に加盟します。"
