--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -149,9 +149,9 @@
  NOT_ONE_PROVINCE_IN_COLONIAL_REGION:0 "$REGION$植民地域に州がない"
  ALL_PROVINCES_IN_COLONIAL_REGION:0 "$REGION$植民地域の全ての州"
  NOT_ALL_PROVINCES_IN_COLONIAL_REGION:0 "$REGION$地域のすべての州ではない"
- LIBERTY_EFFECT:0 "独立欲求$PERC$を$DIRECTION$します。\n"
- TARIFF_VALUE_EFFECT:0 "関税額$PERC$を$DIRECTION$します。\n"
- ADD_LOCAL_AUTONOMY_EFFECT:0 "$WHERE$の自治率$PERC$を$DIRECTION$します。\n"
+ LIBERTY_EFFECT:0 "独立欲求が$PERC$$DIRECTION$\n"
+ TARIFF_VALUE_EFFECT:0 "関税額が$PERC$$DIRECTION$\n"
+ ADD_LOCAL_AUTONOMY_EFFECT:0 "$WHERE$の自治率が$PERC$$DIRECTION$\n"
  SET_LOCAL_AUTONOMY_EFFECT:0 "$WHERE|Y$の自治率を$VALUE|Y$に設定します。\n"
  IS_NOT_CLIENT_OF:0 "以下の衛星国ではない："
  IS_CLIENT_OF:0 "以下の衛星国である："
