--- a/source/localisation/prov_names_l_english.yml
+++ b/source/localisation/prov_names_l_english.yml
@@ -1107,7 +1107,7 @@
  PROV1128:0 "タウデニ"
  PROV1129:0 "アザワド"
  PROV1130:0 "タードメッカ"
- PROV1131:0 "マシーナ"
+ PROV1131:0 "マッシナ"
  PROV1132:0 "トンブクトゥ"
  PROV1133:0 "ガオ"
  PROV1134:0 "ジェンネ"
@@ -2210,7 +2210,7 @@
  PROV2243:0 "テルム"
  PROV2244:0 "タガント"
  PROV2245:0 "ワガドゥー"
- PROV2246:0 "バゲナ"
+ PROV2246:0 "バエナ"
  PROV2247:0 "ホズ"
  PROV2248:0 "ド"
  PROV2249:0 "シビリドゥグー"
@@ -2761,7 +2761,7 @@
  PROV2797:0 "シェンディ"
  PROV2798:0 "ソバ"
  PROV2799:0 "センナール"
- PROV2800:0 "コスティ"
+ PROV2800:0 "ウェルラ"
  PROV2801:0 "メドワ"
  PROV2802:0 "コベ"
  PROV2803:0 "オリノコ・デルタ"
