--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -759,7 +759,7 @@
  USE_CURIA_TREASURY:0 "教皇資金を使う"
  CURIA_TREASURY_NOT_CURIA_CONTROLLER:0 "§R教皇資金を使用できるのは教皇の支配者だけです！§!"
  USE_CURIA_TREASURY_DESC:0 "教皇の支配者として、あなたは教皇資金を使用できます。"
- REFORM_DESIRE_SCALE_EFFECT:0 "改革欲求の成長を$PERC|%-0$$DIRECTION$します。\n"
+ REFORM_DESIRE_SCALE_EFFECT:0 "改革欲求の成長が$PERC|%-0$$DIRECTION$\n"
  REFORM_DESIRE_SCALE_TOOLTIP:0 "改革者を動揺させた我々の行動により、§Y改革欲求§!の成長が$SCALE|%-0$加速します。"
  investigate_heresy:0 "異端の調査"
  MIL_CONST_MERCENARY_TIP:0 "$MERC|Y$は$DATE|Y$にここに出現するでしょう。"
