Save/Update files [ci skip]

--- a/source/localisation/mandala_missions_l_english.yml
+++ b/source/localisation/mandala_missions_l_english.yml
@@ -372,7 +372,7 @@
  indonesia_moluccan_cloves_title:0 "モルッカ諸島のクローブ"
  indonesia_moluccan_cloves_desc:0 "クローブは、世界中で最も価値の高い交易品の一つだ。もし、クローブを独占できれば、夢のような大金持ちになれることだろう"
  indonesia_sea_cucumbers_title:0 "海鼠"
- indonesia_sea_cucumbers_desc:0 "スラウェシ島の交易商は、南方の島について語っており、曰く、そこに住む者たちは海鼠(ナマコ)を獲っているのだとか。この島を見つけて、この珍重品を取引するか、あるいは力づくでこの生産品を奪い取るか、いずれかを行うべきだろう。"
+ indonesia_sea_cucumbers_desc:0 "スラウェシ島の交易商は、南方の島について語っており、曰く、そこに住む者たちは海鼠（ナマコ）を獲っているのだとか。この島を見つけて、この珍重品を取引するか、あるいは力づくでこの生産品を奪い取るか、いずれかを行うべきだろう。"
  indonesia_trade_dominance_title:0 "交易の支配"
  indonesia_trade_dominance_desc:0 "ヌサンタラにおいて、帝国の成功は交易支配に関する力で判断される。"
  indonesia_spice_must_flow_title:0 "香辛料で満ち溢れよ"
@@ -421,7 +421,7 @@
  clove_boom:0 "クローブの流行"
  desc_clove_boom:0 "モルッカ島ではクローブ生産を増大している。"
  tiwi_sea_cucumbers:0 "海鼠"
- desc_tiwi_sea_cucumbers:0 "ティウィ島では海鼠(ナマコ)を獲っており、海鼠ははるばる中国へと取引される。"
+ desc_tiwi_sea_cucumbers:0 "ティウィ島では海鼠（ナマコ）を獲っており、海鼠ははるばる中国へと取引される。"
  no_europeans_in_indonesia_tt:0 "§Yマラヤ§!地方及び§Yインドネシア§!地方内の任意の州を領有する§Yヨーロッパ§!諸国が存在しない。"
  cha_reconquer_indrapura_title:0 "インドラプラの再征服"
  cha_reconquer_indrapura_desc:0 "インドラプラ、カンダラプラの両都市はベトナム人の侵略によって陥落した。盛り返して、両都市を奪還せねばならない。"
@@ -505,7 +505,7 @@
  mnd_dai_examination_system_title:0 "科挙の復活"
  mnd_dai_examination_system_desc:0 "儒教の科挙という制度はここ数十年で衰退を辿っている。教養ある有能な官僚への取り組みを再認識せねばならない。"
  mnd_dai_defy_ming_title:0 "明の打破"
- mnd_dai_defy_ming_desc:0 "黎利(レ・ロイ)は大越から明の暴君を追い出したが、明はまだ自国の覇権を握ったままだ。北京にいる皇帝に対し、頭を垂れることなどないと明に見せつけねばならない。"
+ mnd_dai_defy_ming_desc:0 "黎利（レ・ロイ）は大越から明の暴君を追い出したが、明はまだ自国の覇権を握ったままだ。北京にいる皇帝に対し、頭を垂れることなどないと明に見せつけねばならない。"
  mnd_dai_conquer_canton_title:0 "広州の征服"
  mnd_dai_conquer_canton_desc:0 "我が中国征服の第一歩は、広州の街からだ。明の南方支配が弱まり、自国の進撃に抵抗できなくなる、その瞬間を待つべきだろう。"
  mnd_dai_mandate_of_heaven_title:0 "天命の請求"
