--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -577,7 +577,7 @@
  CURRENT_MORALE:0 "士気：§Y$SIZE$ $STATS$§!\n"
  CURRENT_UNIT_MORALE:0 "ユニットの士気：§Y$VALUE$§W"
  CATEGORY:0 "$COUNTRY|Y$から$TYPE$\n"
- CATEGORY_NEW:0 "$TYPE$ ($COUNTRY$)\n"
+ CATEGORY_NEW:0 "$TYPE$（$COUNTRY$）\n"
  FIRE_STATS:0 "射撃：§Y$STATS$§!\n"
  SHOCK_STATS:0 "白兵：§Y$STATS$§!\n"
  MAN_STATS:0 "機動：§Y$STATS$§!\n"
