--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -39,7 +39,7 @@
  MAX_POWER_STORE:0 "$MAX$点まで持てます。"
  MONARCH_ABILITY_MODIFIED_BY:0 "生まれた際に、この分野で我らの君主は次のボーナスを得ます。：\n$DESC$"
  CARAVAN_POWER:0 "隊商による力"
- CARAVAN_POWER_DESC2:1 "内陸の隊商は、あなたの開発度の1/3($BASE|Y$)から来る基礎値やポリシーとアイデアからの$MODIFIER$を合わせた$VALUE|Y$の交易力を提供します。"
+ CARAVAN_POWER_DESC2:1 "内陸の隊商は、あなたの開発度の1/3（$BASE|Y$）から来る基礎値やポリシーとアイデアからの$MODIFIER$を合わせた$VALUE|Y$の交易力を提供します。"
  MON_DIP_LONG:0 "外交"
  MON_MIL_LONG:0 "軍事"
  MON_ADM_LONG:0 "統治"
@@ -721,7 +721,7 @@
  reform_of_feudal_army:0 "封建軍からの転換"
  reform_of_feudal_army_desc:0 "これまでの軍隊は、徴募された兵士と傭兵によって構成されていた。しかし、このような軍隊は今では時代遅れだ。軍隊の中核に職業軍人を置くことで、軍を強化することができるだろう。"
  integrated_towns:0 "市民階級の参政権拡大"
- integrated_towns_desc:0 "これまでの身分制議会は第一身分(聖職者)と第二身分(貴族)によって行われていた。しかし、近年の経済成長により、第三身分(市民階級など)が力を強めている。議会の構造を転換し、第三身分にもある程度の発言力を持たせてやるべきだ。もちろん、他の身分の権利を侵害しない範囲で、だが。"
+ integrated_towns_desc:0 "これまでの身分制議会は第一身分（聖職者）と第二身分（貴族）によって行われていた。しかし、近年の経済成長により、第三身分（市民階級など）が力を強めている。議会の構造を転換し、第三身分にもある程度の発言力を持たせてやるべきだ。もちろん、他の身分の権利を侵害しない範囲で、だが。"
  freedom_of_worship:0 "信教の自由"
  freedom_of_worship_desc:0 "教会は我が国に対し、異端、異教の信仰を禁止するよう強く求めている。しかし、ルネサンスで生まれた人文主義思想の影響を受けた市民たちは、異教徒にも寛容であるべきだと訴えている。教会を無視することはできないが、市民たちもまた、無視できない存在なのだ。"
  bur_regimental_system:0 "連隊制の創設"
@@ -836,7 +836,7 @@
  crush_the_barons:0 "貴族の打倒"
  crush_the_barons_desc:0 "地方貴族たちは、今も国内各地で大きな権力をふるっている。彼らは反乱の温床だ。中央集権化を進めるには、彼らを打倒しなくてはならない。"
  academia_pontaniana:0 "アカデミア・ポンタニアーナ"
- academia_pontaniana_desc:0 "長きにわたり、ナポリは近代思想の中心地だった。多くの偉大な学者たちがこの地に集い、ルネサンスの思想を各国に広めていた。ジョヴァンニ・ポンターニは学者たちを集め、新たな大学を作った。彼に敬意を表し、その大学は「ポンターニの大学」(アカデミア・ポンタニアーナ)と名付けられた。"
+ academia_pontaniana_desc:0 "長きにわたり、ナポリは近代思想の中心地だった。多くの偉大な学者たちがこの地に集い、ルネサンスの思想を各国に広めていた。ジョヴァンニ・ポンターニは学者たちを集め、新たな大学を作った。彼に敬意を表し、その大学は「ポンターニの大学（アカデミア・ポンタニアーナ）」と名付けられた。"
  expanded_arsenale:0 "造船所の拡張"
  expanded_arsenale_desc:0 "ナポリ造船所は14世紀に建設され、以来我が国の造船業の中心地として、海軍の最重要施設となっている。しかし、外国勢力に対抗するには、造船所の拡大と近代化を欠かさないことが大切だ。強力な艦隊を維持するために、他の港も軍港としての役割を強化し、造船を効率化しよう。"
  city_of_artists:0 "芸術の街"
