Save/Update files [ci skip]

--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -2789,7 +2789,7 @@
  SIEGE_DEFENDERS:0 "防御軍"
  SIEGE_ATTACKERS:0 "攻撃軍"
  SIEGE_MINOR:0 "少数の"
- SIEGE_AVERAGE:0 "平均的な"
+ SIEGE_AVERAGE:0 "中規模の"
  SIEGE_MAJOR:0 "主要な"
  counterfeit_currency:0 "通貨の偽造"
  sow_discontent:0 "不満の種をまく"
@@ -3231,7 +3231,7 @@
  legatus_natus:0 "生まれながらの教皇特使"
  desc_legatus_natus:0 "我々はアルプスの北側における教皇の代表者である「生まれながらの教皇特使」の権威ある称号を保持している。"
  CALL_ALL_ALLIES:0 "同盟国に参戦を要請"
- PERC_OF_MARKET:0 "%　市場全体に対する"
+ PERC_OF_MARKET:0 "%（市場全体に対し）"
  INTEGRATETITLE:0 "統合"
  INTEGRATENEWDESC:0 "あなたの国に$COUNTRY$が同化するよう要求しますか？"
  INTEGRATEINVALID:0 "同君連合下で§Y$YEARS$§!年間以上下位国であった国だけを統合することができます。"
