--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1837,8 +1837,8 @@
  adu_retake_sicily_title:0 "シチリア島の奪回"
  adu_retake_sicily_desc:0 "9世紀、シチリア首長国は退廃し壊滅的なビザンツ帝国の手から奪われた。シチリアはムスリム支配下で繁栄し、それが11世紀後半にシチリア伯ルッジェーロのものとなるまで、文化的な多様な民族のるつぼのままであった。多くの人がこの驚くべき島が急成長する我が帝国に戻るのを望むーそして、そうなるだろう。"
  adu_colonize_brazil_cn:0 "§Y[Root.GetName]§!あるいは彼らの従属国が、ブラジル植民地域に、完全に植民地化された州を§Y10§!州以上領有する。"
- adu_own_tunisia_1_title:0 "アルモハードの地"
- adu_own_tunisia_1_desc:0 "アルモハード朝は、ギリシャ人にへつらわれる程崇拝及び賞賛される伝説のアレクサンドロスと同じ程の大帝国を築いた。アフリカ北部の海岸は正しく我々のものだ。自分が相続する遺産を知らないつまらない後継者からそれを解放せよ。"
+ adu_own_tunisia_1_title:0 "ムワッヒドの地"
+ adu_own_tunisia_1_desc:0 "ムワッヒド朝は、ギリシャ人にへつらわれる程崇拝及び賞賛される伝説のアレクサンドロスと同じ程の大帝国を築いた。アフリカ北部の海岸は正しく我々のものだ。自分が相続する遺産を知らないつまらない後継者からそれを解放せよ。"
  adu_fatimid_lands_title:0 "エジプト内部へ"
  adu_fatimid_lands_desc:0 "何世代にも渡って争われたエジプトの肥沃なデルタは、世界で最も豊かな土地のいくつかを抱える。エジプトでは、マムルークやサラディン、そして彼らよりは注目度が劣る征服者たちのような奴隷の専制君主の以前に、預言者ムハンマドー彼に平穏あれ、の子孫と称するファーティマ朝によって調和のとれた支配を受けた。この領土を奪い、我々の慈悲深き宗主の下に置け。"
  adu_moroccan_conquest_title:0 "モロッコ征服"
