Save/Update files [ci skip]

--- a/source/localisation/mandala_missions_l_english.yml
+++ b/source/localisation/mandala_missions_l_english.yml
@@ -126,7 +126,7 @@
  mnd_siam_protect_the_mon_title:0 "モン族の保護"
  mnd_siam_protect_the_mon_desc:0 "モン族はかつて大帝国を支配し、我が文化の多くを創始した。彼らは過去の黄金時代から遠く離れてしまったので、彼らの保護を申し出るべきだ。"
  mnd_siam_defeat_burma_title:0 "ビルマの制圧"
- mnd_siam_defeat_burma_desc:0 "西洋に新帝国出現の恐れは許容できない。潜在的な脅威が本当の意味で我々が対抗できるようになる前に、あらゆる手立てを駆使して打破せねばならない。"
+ mnd_siam_defeat_burma_desc:0 "西方に新たな帝国が出現する恐れは許容できるものではない。潜在的な脅威が本当の意味で我々が対抗できるようになる前に、あらゆる手立てを駆使して打破せねばならない。"
  mnd_siam_conquer_burma_title:0 "ビルマ侵攻"
  crush_burma_tt:0 "§Yビルマ§!地方に首都があり、総開発度が§Y50§!以上ある、独立国及び朝貢国が存在しない。"
  mnd_siam_conquer_burma_desc:0 "ビルマでは、永遠なる平和など約束されない。この地方を自国の支配下に置かねばならない。"
