Save/Update files [ci skip]

--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -654,8 +654,8 @@
  estate_nobles_better_integration_desc:1 "国家の中央集権化や属国の併合は、行政官や外交官が統合作業に忙殺されるため、簡単にはいかない。しかし、[Root.GetNobilityOrFallbackName]自国の統合政策の主導権を握らせれば、これを回避できる。"
  estate_church_religious_diplomats:0 "宗教外交官"
  estate_church_religious_diplomats_desc:1 "良い外交の実現は難しい。ちょっとした誤解で、二国間の関係は急落する。\n非常に宗教色の強い外交官を信仰の同胞に派遣することで、少なくともこういった事態を防ぐことができる"
- estate_church_heir_shrine:0 "後継者用神殿の建造"
- estate_church_heir_shrine_desc:0 "通常、カルトは我が[Root.Monarch.GetTitle]の問題であり、後継者のためのものではない。しかし、これは神殿を建造することで変えることができる。その神殿は後継者に宗教的な避難所としての役目を果たし、特定のカルトに自身の信仰を表現することを可能とする。"
+ estate_church_heir_shrine:0 "後継者のための神殿の建造"
+ estate_church_heir_shrine_desc:0 "通常、カルトは[Root.Monarch.GetTitle]の問題であり、後継者の問題ではない。しかし、これは神殿を建造することで変えることができる。その神殿は後継者に宗教的な避難所としての役目を果たし、特定のカルトに自身の信仰を表現することを可能とする。"
  estate_burghers_hydraulic_rights:0 "水理権"
  estate_burghers_hydraulic_rights_desc:0 "水の分配は遠隔地の僻地の村々がいつも心配している事案だ。[Root.GetBurghersName]が水利権をより直接支配できるようにすることで、公平で効率的な水の分配が保証できる。"
  estate_burghers_enslaving_rights_gt:0 "領有州の内、地形タイプが§Y砂漠§!、§Y沿岸砂漠§!、§Yステップ§!、§Yサバンナ§!の州の開発コストを§G50.0％§!減少させる。"
