Save/Update files [ci skip]

--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -3552,7 +3552,7 @@
  EVTOPTA718:0 "強力な法律を制定する。"
  EVTOPTB718:0 "より寛大になる。"
  EVTNAME719:0 "強力な軍事指導力"
- EVTDESC719:0 "我々の最近の戦争は、農民の財産からでも、有能な指導者への昇進をもたらした。我々は彼らの能力で繁栄することができるが、あるいは、結局、彼らが貴族ではないとして拒絶することもできる。彼らを受け入れることは、我が国の派閥を動揺させるかもしれない。"
+ EVTDESC719:0 "最近の戦争で、有能な指揮官らが名を成した。農民の家柄にもかかわらずである。彼らの能力で繁栄することもできるし、彼らが結局貴族ではないとして拒絶することもできる。ただし、彼らを受け入れれば、我が国の派閥を動揺させるかもしれない。"
  EVTOPTA719:0 "$COUNTRY$は彼らすべてを必要としている！"
  EVTOPTB719:0 "非貴族を制限する。"
  EVTNAME720:0 "海軍の伝統"
