--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -365,7 +365,7 @@
  TIW_ideas_start:0 "ティウィの伝統"
  TIW_ideas_bonus:0 "ティウィの宿願"
  TIW_yiminga:0 "イミンガ"
- TIW_yiminga_desc:0 "我々のスキン、つまり「イミンガ」は母系であり、母から子へと受け継がれていく。自国の子供たちの運命を決定するものは女性の家だ。彼らの集団、生命、精神、呼吸、鼓動。女性は子供に生命と外見をもたらし、男性は胎児に霊魂をもたらす。他の部族は女性の努力を軽蔑するだろうが、自国の社会階級や家族が決定されるのは彼女たちからであり、彼女たちがが男の片割れと権力を分かち合うことはまったく正しいことである。"
+ TIW_yiminga_desc:0 "我々のスキン、つまり「イミンガ」は母系であり、母から子へと受け継がれていく。自国の子供たちの運命を決定するものは女性の家だ。彼らの集団、生命、精神、呼吸、鼓動。女性は子供に生命と外見をもたらし、男性は胎児に霊魂をもたらす。他の部族は女性の努力を軽蔑するだろうが、自国の社会階級や家族が決定されるのは彼女たちからであり、彼女たちが男の片割れと権力を分かち合うことはまったく正しいことである。"
  TIW_dreaming_totem:0 "ドリーミング・トーテム"
  TIW_dreaming_totem_desc:0 "ティウィのドリーミング・トーテムは、彼らの父によってティウィへ遣わされた神聖な動物だ。トーテムを持ったティウィはその霊獣を殺したり。その肉を食べたりしてはならない。それは、精神的な人食いとなってしまう。それはティウィの自我の不可欠な部分であり、舞踊や祭式中の独自性の印として使用されている。"
  TIW_kulama:0 "クラマ"
@@ -420,7 +420,7 @@
  KAU_pangkarra:0 "パンカラ制"
  KAU_pangkarra_desc:0 "自国の社会はいくつかの異なったバンドに分かれており、各々が独立して活動しているが、ガウナの独自性で統合されている。自由に組織化できるようにすれば、国民の管理は容易い。"
  KAU_coastal_pangkarra:0 "沿岸部のパンカラ"
- KAU_coastal_pangkarra_desc:0 "全てのパンカラは自治権と最小限の統治持つのに加え、生まれながらにして海の利用がが認められねばならない。漁業と海上交易はガウナの生活には不可欠な要素であり、沿岸部を利用できないパンカラはパンカラではない。"
+ KAU_coastal_pangkarra_desc:0 "全てのパンカラは自治権と最小限の統治持つのに加え、生まれながらにして海の利用が認められねばならない。漁業と海上交易はガウナの生活には不可欠な要素であり、沿岸部を利用できないパンカラはパンカラではない。"
  KAU_redgum_shelters:0 "レッドガムの避難所"
  KAU_redgum_shelters_desc:0 "他の社会では定住型で軟弱だが、ガウナ民族は季節の移り変わりとともに移動する。夏には海に魚があふれるが、冬は雨が降り、レッドガムの避難所で火を維持することが生存に不可欠となる。"
  KAU_communal_ownership:0 "共同所有"
@@ -1086,7 +1086,7 @@
  sugarcane_lost_mod:0 "ネズミに奪われたサトウキビ"
  desc_sugarcane_lost_mod:0 "ネズミの大群によってサトウキビ畑は壊滅した。"
  polynesian.11.t:0 "最高の友人"
- polynesian.11.d:0 "初めて島に入植した時から、犬は仲間として、そして食糧として私たちのそばにいました。ほぼ全てのの島民集団はそれぞれ独自の犬種を有しています。例えば、ハワイのポイにアオテアロアのクニ、タヒチの犬などです。食糧が必要になったとき、まず真っ先に犬を食糧にするのではなく、野菜や魚を食べさせて準備します。"
+ polynesian.11.d:0 "初めて島に入植した時から、犬は仲間として、そして食糧として私たちのそばにいました。ほぼ全ての島民集団はそれぞれ独自の犬種を有しています。例えば、ハワイのポイにアオテアロアのクニ、タヒチの犬などです。食糧が必要になったとき、まず真っ先に犬を食糧にするのではなく、野菜や魚を食べさせて準備します。"
  polynesian.11.a:0 "犬ってのは素晴らしい食糧源なんだ。"
  polynesian.12.t:0 "ワカレース"
  polynesian.12.d:0 "この地域に定住にワカやカヌーに利用しており、特にワカは我々の文化の中心である。競争は人々を楽しませ、共同体の健康を維持するための最良の手段である。ある漕ぎ手のチームが他チームとのレースを挑むとのニュースが地域全体に急速に広がった。[Root.Monarch.GetName]ですらレースを見るために沿岸に立ち寄った。賭け事が発生するのは自然なことだった。"
@@ -1255,7 +1255,7 @@
  estate_regency_events.5.d:0 "市民階級はお金にしか興味がないと言われている。お金が豊富である限り、彼らは幸せであり、多くの問題を引き起こすことはないと、少なくともそう私たちは考えている。[Root.Monarch.GetName]と[Root.Monarch.GetHerHis]の派閥は、彼らが権力を握っている間、自身の力を使っていくつかの怪しげな商談をさらに前進させた。最も、密輸は私たちにとって目新しいことではなく、加えて私たちはそれを知っていながら目をつぶることも初めてではない。しかしながら今回はこれらの違法な動きが他の国を刺激し、彼らがこの事件の補償を得ることを宣戦布告の口実として利用する可能性がある。そして残念ながら、彼らは交渉する気がない。"
  estate_regency_events.5.a:0 "我々は待つことしかできない"
  estate_regency_events.6.t:0 "不寛容さの勃興"
- estate_regency_events.6.d:0 "あらゆる宗教的権力が常に自身の権力を永続させようとしたり、他宗教に対する支配をもくろんだりもすると言われても、誰も驚かないでしょう。そして、これはまさに[Root.TAG.GetName]が直面している状況です。地域の聖職者は自身の力を使って私たちの領地の他の宗教の影響を取り除こうと画策しており、我々は彼らの力の強大さのあまり拒絶しきれていない。臆病な抗議のみが我々がが発することのできた主張のすべてだ。将来的にこの方針を変更することは間違いありませんが、今のところ我々はこの方針の中で生きるしかない。"
+ estate_regency_events.6.d:0 "あらゆる宗教的権力が常に自身の権力を永続させようとしたり、他宗教に対する支配をもくろんだりもすると言われても、誰も驚かないでしょう。そして、これはまさに[Root.TAG.GetName]が直面している状況です。地域の聖職者は自身の力を使って私たちの領地の他の宗教の影響を取り除こうと画策しており、我々は彼らの力の強大さのあまり拒絶しきれていない。臆病な抗議のみが我々が発することのできた主張のすべてだ。将来的にこの方針を変更することは間違いありませんが、今のところ我々はこの方針の中で生きるしかない。"
  estate_regency_events.6.a:0 "一度に一つの問題"
  religious_intolerance_mod:0 "宗教上での不寛容"
  desc_religious_intolerance_mod:0 "国教に従わない者に対する不寛容の新しい波が始まった。"
