--- a/source/localisation/policies_l_english.yml
+++ b/source/localisation/policies_l_english.yml
@@ -388,7 +388,7 @@
  indirect_approach_policy:0 "間接的接近"
  desc_indirect_approach_policy:0 "自然は体であり、目や耳があり、どこにでもあり、常にあり、避けることはできない。自国で言われていることや行われていることは全て、それを通じて知ることができる。"
  loyalty_to_the_land_policy:0 "領地への忠義"
- desc_loyalty_to_the_land_policy:0 "上空のあざ、月に照らされた紫雲。我々ははそれを肌のあざのようだと感じる。この土地を捨捨てることは、自分自身を捨てることだ。"
+ desc_loyalty_to_the_land_policy:0 "上空のあざ、月に照らされた紫雲。我々はそれを肌のあざのようだと感じる。この土地を捨捨てることは、自分自身を捨てることだ。"
  commercial_tribes_policy:0 "商業部族"
  desc_commercial_tribes_policy:0 "商業網も格段に広がり、自国の商人はその行動範囲を非常に大きく広がることができるようになった。やる意思があれば、道は開く｡"
  war_horses_policy:0 "軍馬"
