--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -254,7 +254,7 @@
  galician:0 "ガリシア"
  gascon:0 "ガスコーニュ"
  georgian:0 "グルジア"
- germanic:0 "ゲルマン"
+ germanic:0 "ドイツ"
  greek:0 "ギリシャ"
  guajiro:0 "ロコノ"
  guarani:0 "グアラニー"
