--- a/source/localisation/mandala_missions_l_english.yml
+++ b/source/localisation/mandala_missions_l_english.yml
@@ -905,5 +905,5 @@
  pow_tsenacommacah_desc:0 "自国の本土は、土壌の良さと住人の豊かさにより、過密であることで知られている。全人口を抱えるに十分な領地を確保せねばならない。"
  pow_the_laughing_king_title:0 "笑王"
  pow_the_laughing_king_desc:0 "勇敢な戦士であることだけが首長の重要な資質ではなく、忠誠心もまた同様に重要である。大笑王の気高さは他の追随を許さないものであり、彼が自国の側にいることは最高の誉だ。"
- pow_yehakins_effect:0 "要塞化家屋もしくはロングハウスがが建造されている領有州全てに対して要塞化される。"
+ pow_yehakins_effect:0 "要塞化家屋もしくはロングハウスが建造されている領有州全てに対して要塞化される。"
  follows_buddha_tt:0 "§Y仏陀§!の教えに従います"
