--- a/source/localisation/mare_nostrum_l_english.yml
+++ b/source/localisation/mare_nostrum_l_english.yml
@@ -106,7 +106,7 @@
  ARMY_ACCESS:0 "我々はこの地の軍事通行権を持っています："
  ARMY_NO_ACCESS:0 "我々はこの地の軍事通行権を持っていません："
  PRIMITIVE_ACCESS:0 "\n我々の征服者はこれらの未開の地を通じて我々を導くことができます。"
- EXILED_ACCESS:0 "\n追放軍は自由に移動できます。"
+ EXILED_ACCESS:0 "\n放浪軍は自由に移動できます。"
  BOARD_SHIPS_ACCESS:0 "\n乗船します。"
  CONDOTTIERI_ACCESS:0 "\nこの部隊は$HIREDBY$で雇用され、彼はここでの通行権があります。"
  ATWAR_ACCESS:0 "\n戦争中です！"
